@@ -90,8 +90,8 @@ public class TeamCapacityServiceImpl extends JiraKPIService<Double, List<Object>
 	 * @throws ApplicationException
 	 */
 	@Override
-	public KpiElement getKpiData(KpiRequest kpiRequest, KpiElement kpiElement,
-			TreeAggregatorDetail treeAggregatorDetail) throws ApplicationException {
+	public KpiElement getKpiData(KpiRequest kpiRequest, KpiElement kpiElement, TreeAggregatorDetail treeAggregatorDetail)
+			throws ApplicationException {
 
 		Node root = treeAggregatorDetail.getRoot();
 		Map<String, Node> mapTmp = treeAggregatorDetail.getMapTmp();
@@ -179,8 +179,7 @@ public class TeamCapacityServiceImpl extends JiraKPIService<Double, List<Object>
 				for (int i = 0; i < kpiRequest.getKanbanXaxisDataPoints(); i++) {
 					CustomDateRange dateRange = KpiDataHelper.getStartAndEndDateForDataFiltering(currentDate,
 							kpiRequest.getDuration());
-					String projectName = projectNodeId.substring(0,
-							projectNodeId.lastIndexOf(CommonConstant.UNDERSCORE));
+					String projectName = node.getProjectFilter().getName();
 					Double capacity = filterDataBasedOnStartAndEndDate(dateWiseKanbanCapacity, dateRange, projectName);
 					String date = getRange(dateRange, kpiRequest);
 					dataCount.add(getDataCountObject(capacity, projectName, date));
@@ -207,7 +206,7 @@ public class TeamCapacityServiceImpl extends JiraKPIService<Double, List<Object>
 		dataCount.setSprintNames(new ArrayList<>(Arrays.asList(projectName)));
 		dataCount.setValue(value);
 		Map<String, Object> hoverValue = new HashMap<>();
-		hoverValue.put("Total Capacity", new Double(String.format("%.1f", value)));
+		hoverValue.put("Total Capacity", Double.valueOf(String.format("%.1f", value)));
 		dataCount.setHoverValue(hoverValue);
 		return dataCount;
 	}
@@ -217,12 +216,12 @@ public class TeamCapacityServiceImpl extends JiraKPIService<Double, List<Object>
 		List<KanbanCapacity> kanbanCapacityList = new ArrayList<>();
 
 		Double capacity = 0.0d;
-		for (LocalDate currentDate = dateRange.getStartDate(); currentDate.compareTo(dateRange.getStartDate()) >= 0
-				&& dateRange.getEndDate().compareTo(currentDate) >= 0; currentDate = currentDate.plusDays(1)) {
+		for (LocalDate currentDate = dateRange.getStartDate(); currentDate.compareTo(dateRange.getStartDate()) >= 0 &&
+				dateRange.getEndDate().compareTo(currentDate) >= 0; currentDate = currentDate.plusDays(1)) {
 			List<KanbanCapacity> dummyList = new ArrayList<>();
 			dummyList.add(KanbanCapacity.builder().capacity(0.0d).startDate(currentDate).endDate(currentDate)
 					.projectName(projectName).build());
-				kanbanCapacityList.addAll(dateWiseKanbanCapacity.getOrDefault(currentDate.toString(), dummyList));
+			kanbanCapacityList.addAll(dateWiseKanbanCapacity.getOrDefault(currentDate.toString(), dummyList));
 		}
 		if (CollectionUtils.isNotEmpty(kanbanCapacityList)) {
 			capacity = kanbanCapacityList.stream().mapToDouble(kanbanCapacity -> kanbanCapacity.getCapacity()).sum();
@@ -231,7 +230,6 @@ public class TeamCapacityServiceImpl extends JiraKPIService<Double, List<Object>
 	}
 
 	/**
-	 *
 	 * @param kpiRequest
 	 * @param currentDate
 	 * @return
@@ -256,8 +254,8 @@ public class TeamCapacityServiceImpl extends JiraKPIService<Double, List<Object>
 	private String getRange(CustomDateRange dateRange, KpiRequest kpiRequest) {
 		String range = null;
 		if (CommonConstant.WEEK.equalsIgnoreCase(kpiRequest.getDuration())) {
-			range = DateUtil.localDateTimeConverter(dateRange.getStartDate()) + " to "
-					+ DateUtil.localDateTimeConverter(dateRange.getEndDate());
+			range = DateUtil.localDateTimeConverter(dateRange.getStartDate()) + " to " +
+					DateUtil.localDateTimeConverter(dateRange.getEndDate());
 		} else if (CommonConstant.MONTH.equalsIgnoreCase(kpiRequest.getDuration())) {
 			range = dateRange.getStartDate().getMonth().toString() + " " + dateRange.getStartDate().getYear();
 		} else {
@@ -275,5 +273,4 @@ public class TeamCapacityServiceImpl extends JiraKPIService<Double, List<Object>
 	public Double calculateThresholdValue(FieldMapping fieldMapping) {
 		return calculateThresholdValue(fieldMapping.getThresholdValueKPI58(), KPICode.TEAM_CAPACITY.getKpiId());
 	}
-
 }
