@@ -22,16 +22,16 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
-
 import javax.ws.rs.core.Feature;
 
+import com.publicissapient.kpidashboard.apis.common.service.KpiDataCacheService;
+import com.publicissapient.kpidashboard.apis.common.service.impl.KpiDataProvider;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.tuple.Pair;
@@ -39,14 +39,10 @@ import org.bson.types.ObjectId;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
-import com.google.common.collect.Lists;
 import com.publicissapient.kpidashboard.apis.appsetting.service.ConfigHelperService;
 import com.publicissapient.kpidashboard.apis.common.service.CacheService;
-import com.publicissapient.kpidashboard.apis.common.service.impl.KpiHelperService;
 import com.publicissapient.kpidashboard.apis.config.CustomApiConfig;
-import com.publicissapient.kpidashboard.apis.constant.Constant;
 import com.publicissapient.kpidashboard.apis.enums.Filters;
-import com.publicissapient.kpidashboard.apis.enums.JiraFeature;
 import com.publicissapient.kpidashboard.apis.enums.KPICode;
 import com.publicissapient.kpidashboard.apis.enums.KPIExcelColumn;
 import com.publicissapient.kpidashboard.apis.enums.KPISource;
@@ -58,28 +54,21 @@ import com.publicissapient.kpidashboard.apis.model.KpiElement;
 import com.publicissapient.kpidashboard.apis.model.KpiRequest;
 import com.publicissapient.kpidashboard.apis.model.Node;
 import com.publicissapient.kpidashboard.apis.model.TreeAggregatorDetail;
-import com.publicissapient.kpidashboard.apis.util.CommonUtils;
 import com.publicissapient.kpidashboard.apis.util.KPIExcelUtility;
 import com.publicissapient.kpidashboard.apis.util.KpiDataHelper;
 import com.publicissapient.kpidashboard.common.constant.CommonConstant;
-import com.publicissapient.kpidashboard.common.constant.NormalizedJira;
 import com.publicissapient.kpidashboard.common.model.application.DataCount;
 import com.publicissapient.kpidashboard.common.model.application.FieldMapping;
 import com.publicissapient.kpidashboard.common.model.jira.JiraIssue;
 import com.publicissapient.kpidashboard.common.model.jira.JiraIssueCustomHistory;
 import com.publicissapient.kpidashboard.common.model.jira.SprintDetails;
-import com.publicissapient.kpidashboard.common.model.jira.SprintIssue;
-import com.publicissapient.kpidashboard.common.repository.jira.JiraIssueCustomHistoryRepository;
-import com.publicissapient.kpidashboard.common.repository.jira.JiraIssueRepository;
-import com.publicissapient.kpidashboard.common.repository.jira.SprintRepository;
 
 import lombok.extern.slf4j.Slf4j;
 
 /**
  * This class calculates the DRR and trend analysis of the DRR.
- * 
- * @author pkum34
  *
+ * @author pkum34
  */
 @Component
 @Slf4j
@@ -90,58 +79,26 @@ public class DRRServiceImpl extends JiraKPIService<Double, List<Object>, Map<Str
 	private static final String CLOSED_DEFECT_DATA = "closedDefects";
 	private static final String REJECTED = "Rejected Defects";
 	private static final String COMPLETED = "Completed Defects";
-	private static final String DEV = "DeveloperKpi";
 	public static final String SPRINT_WISE_SPRINT_DETAILS = "sprintWiseSprintDetails";
 	public static final String TOTAL_DEFECT_LIST = "totalDefectList";
 	public static final String STORY_LIST = "storyList";
 
 	@Autowired
-	private JiraIssueRepository jiraIssueRepository;
-
-	@Autowired
 	private ConfigHelperService configHelperService;
-
 	@Autowired
 	private CustomApiConfig customApiConfig;
-
 	@Autowired
-	private FilterHelperService flterHelperService;
+	private FilterHelperService filterHelperService;
 	@Autowired
 	private CacheService cacheService;
 	@Autowired
-	private SprintRepository sprintRepository;
+	private KpiDataCacheService kpiDataCacheService;
 	@Autowired
-	private JiraIssueCustomHistoryRepository jiraIssueCustomHistoryRepository;
+	private KpiDataProvider kpiDataProvider;
 
 	private static final String TOTAL_SPRINT_SUBTASK_DEFECTS = "totalSprintSubtaskDefects";
 	private static final String SUB_TASK_BUGS_HISTORY = "SubTaskBugsHistory";
-
-	public static void getDefectsWithDrop(Map<String, Map<String, List<String>>> droppedDefects,
-			List<JiraIssue> defectDataList, List<JiraIssue> defectListWthDrop) {
-		if (org.apache.commons.collections4.CollectionUtils.isNotEmpty(defectDataList)) {
-			Set<JiraIssue> defectListWthDropSet = new HashSet<>();
-			defectDataList.forEach(jiraIssue -> getDefectsWthDrop(droppedDefects, defectListWthDropSet, jiraIssue));
-			defectListWthDrop.addAll(defectListWthDropSet);
-		}
-	}
-
-	private static void getDefectsWthDrop(Map<String, Map<String, List<String>>> droppedDefects,
-			Set<JiraIssue> defectListWthDropSet, JiraIssue jiraIssue) {
-		if (!StringUtils.isBlank(jiraIssue.getStatus())) {
-			Map<String, List<String>> defectStatus = droppedDefects.get(jiraIssue.getBasicProjectConfigId());
-			if (!defectStatus.isEmpty() && (StringUtils.isNotEmpty(jiraIssue.getResolution())
-					&& CollectionUtils.isNotEmpty(defectStatus.get(Constant.RESOLUTION_TYPE_FOR_REJECTION))
-					&& defectStatus.get(Constant.RESOLUTION_TYPE_FOR_REJECTION).stream().map(String::toLowerCase)
-							.collect(Collectors.toList()).contains(jiraIssue.getResolution().toLowerCase())
-					|| (StringUtils.isNotEmpty(jiraIssue.getStatus())
-							&& CollectionUtils.isNotEmpty(defectStatus.get(Constant.DEFECT_REJECTION_STATUS))
-							&& defectStatus.get(Constant.DEFECT_REJECTION_STATUS).stream().map(String::toLowerCase)
-									.collect(Collectors.toList()).contains(jiraIssue.getStatus().toLowerCase())))) {
-				defectListWthDropSet.add(jiraIssue);
-
-			}
-		}
-	}
+	private List<String> sprintIdList = Collections.synchronizedList(new ArrayList<>());
 
 	@Override
 	public String getQualifierType() {
@@ -149,19 +106,18 @@ public class DRRServiceImpl extends JiraKPIService<Double, List<Object>, Map<Str
 	}
 
 	@Override
-	public KpiElement getKpiData(KpiRequest kpiRequest, KpiElement kpiElement,
-			TreeAggregatorDetail treeAggregatorDetail) throws ApplicationException {
+	public KpiElement getKpiData(KpiRequest kpiRequest, KpiElement kpiElement, TreeAggregatorDetail treeAggregatorDetail)
+			throws ApplicationException {
 
 		List<DataCount> trendValueList = new ArrayList<>();
 		Node root = treeAggregatorDetail.getRoot();
 		Map<String, Node> mapTmp = treeAggregatorDetail.getMapTmp();
-
+		sprintIdList = treeAggregatorDetail.getMapOfListOfLeafNodes().get(CommonConstant.SPRINT_MASTER).stream()
+				.map(node -> node.getSprintFilter().getId()).collect(Collectors.toList());
 		treeAggregatorDetail.getMapOfListOfLeafNodes().forEach((k, v) -> {
-
 			if (Filters.getFilter(k) == Filters.SPRINT) {
 				sprintWiseLeafNodeValue(mapTmp, v, trendValueList, kpiElement, kpiRequest);
 			}
-
 		});
 
 		log.debug("[DRR-LEAF-NODE-VALUE][{}]. Values of leaf node after KPI calculation {}",
@@ -182,93 +138,50 @@ public class DRRServiceImpl extends JiraKPIService<Double, List<Object>, Map<Str
 	public Map<String, Object> fetchKPIDataFromDb(List<Node> leafNodeList, String startDate, String endDate,
 			KpiRequest kpiRequest) {
 		Map<String, Object> resultListMap = new HashMap<>();
-		Map<String, List<String>> mapOfFilters = new LinkedHashMap<>();
-		List<String> sprintList = new ArrayList<>();
-		List<String> basicProjectConfigIds = new ArrayList<>();
-		Map<String, Map<String, Object>> uniqueProjectMap = new HashMap<>();
-		Map<String, Map<String, List<String>>> defectResolutionRejectionMap = new HashMap<>();
-		List<String> defectType = new ArrayList<>();
-
+		Map<ObjectId, List<String>> projectWiseSprints = new HashMap<>();
 		leafNodeList.forEach(leaf -> {
 			ObjectId basicProjectConfigId = leaf.getProjectFilter().getBasicProjectConfigId();
-			Map<String, Object> mapOfProjectFilters = new LinkedHashMap<>();
-
-			FieldMapping fieldMapping = configHelperService.getFieldMappingMap().get(basicProjectConfigId);
-			sprintList.add(leaf.getSprintFilter().getId());
-			basicProjectConfigIds.add(basicProjectConfigId.toString());
-			defectType.add(NormalizedJira.DEFECT_TYPE.getValue());
-			KpiHelperService.getDroppedDefectsFilters(defectResolutionRejectionMap, basicProjectConfigId,
-					fieldMapping.getResolutionTypeForRejectionKPI37(),
-					fieldMapping.getJiraDefectRejectionStatusKPI37());
-			mapOfProjectFilters.put(JiraFeature.ISSUE_TYPE.getFieldValueInFeature(),
-					CommonUtils.convertToPatternList(defectType));
-			uniqueProjectMap.put(basicProjectConfigId.toString(), mapOfProjectFilters);
+			projectWiseSprints.putIfAbsent(basicProjectConfigId, new ArrayList<>());
+			projectWiseSprints.get(basicProjectConfigId).add(leaf.getSprintFilter().getId());
 		});
 
-		List<SprintDetails> sprintDetails = sprintRepository.findBySprintIDIn(sprintList);
-
-		Set<String> totalSprintReportStories = new HashSet<>();
-		Set<String> totalIssue = new HashSet<>();
-		Set<String> totalIssueInSprint = new HashSet<>();
-		sprintDetails.forEach(sprintDetail -> {
-			if (CollectionUtils.isNotEmpty(sprintDetail.getTotalIssues())) {
-				FieldMapping fieldMapping = configHelperService.getFieldMapping(sprintDetail.getBasicProjectConfigId());
-				totalSprintReportStories.addAll(sprintDetail.getTotalIssues().stream()
-						.filter(sprintIssue -> !fieldMapping.getJiradefecttype().contains(sprintIssue.getTypeName()))
-						.map(SprintIssue::getNumber).collect(Collectors.toSet()));
-				totalIssue.addAll(KpiDataHelper.getIssuesIdListBasedOnTypeFromSprintDetails(sprintDetail,
-						CommonConstant.TOTAL_ISSUES));
-			}
-			totalIssueInSprint.addAll(KpiDataHelper.getIssuesIdListBasedOnTypeFromSprintDetails(sprintDetail,
-					CommonConstant.TOTAL_ISSUES));
-			totalIssueInSprint.addAll(KpiDataHelper.getIssuesIdListBasedOnTypeFromSprintDetails(sprintDetail,
-					CommonConstant.COMPLETED_ISSUES_ANOTHER_SPRINT));
-			totalIssueInSprint.addAll(KpiDataHelper.getIssuesIdListBasedOnTypeFromSprintDetails(sprintDetail,
-					CommonConstant.PUNTED_ISSUES));
-			totalIssueInSprint.addAll(KpiDataHelper.getIssuesIdListBasedOnTypeFromSprintDetails(sprintDetail,
-					CommonConstant.ADDED_ISSUES));
-
-		});
-
-		/** additional filter **/
-		KpiDataHelper.createAdditionalFilterMap(kpiRequest, mapOfFilters, Constant.SCRUM, DEV, flterHelperService);
-
-		mapOfFilters.put(JiraFeature.BASIC_PROJECT_CONFIG_ID.getFieldValueInFeature(),
-				basicProjectConfigIds.stream().distinct().collect(Collectors.toList()));
+		List<JiraIssue> totalIssue = new ArrayList<>();
+		List<JiraIssue> totalSubTaskDefects = new ArrayList<>();
+		List<JiraIssueCustomHistory> subTaskBugsCustomHistory = new ArrayList<>();
+		List<SprintDetails> sprintDetails = new ArrayList<>();
+		List<JiraIssue> canceledDefectList = new ArrayList<>();
 		List<JiraIssue> totalDefectList = new ArrayList<>();
-		if (CollectionUtils.isNotEmpty(totalIssue)) {
-			List<JiraIssue> totalSprintReportDefects = jiraIssueRepository.findIssueByNumber(mapOfFilters, totalIssue,
-					uniqueProjectMap);
+		boolean fetchCachedData = filterHelperService.isFilterSelectedTillSprintLevel(kpiRequest.getLevel(), false);
+		projectWiseSprints.forEach((basicProjectConfigId, sprintList) -> {
+			Map<String, Object> result;
+			if (fetchCachedData) { // fetch data from cache only if Filter is selected till Sprint
+				// level.
+				result = kpiDataCacheService.fetchDRRData(kpiRequest, basicProjectConfigId, sprintIdList,
+						KPICode.DEFECT_REJECTION_RATE.getKpiId());
+			} else { // fetch data from DB if filters below Sprint level (i.e. additional filters)
+				result = kpiDataProvider.fetchDRRData(kpiRequest, basicProjectConfigId, sprintList);
+			}
 
-			List<JiraIssue> totalSubTaskDefects = jiraIssueRepository
-					.findLinkedDefects(mapOfFilters, totalSprintReportStories, uniqueProjectMap).stream()
-					.filter(jiraIssue -> !totalIssueInSprint.contains(jiraIssue.getNumber()))
-					.collect(Collectors.toList());
-
-			List<JiraIssueCustomHistory> subTaskBugsCustomHistory = jiraIssueCustomHistoryRepository
-					.findByStoryIDInAndBasicProjectConfigIdIn(
-							totalSubTaskDefects.stream().map(JiraIssue::getNumber).collect(Collectors.toList()),
-							basicProjectConfigIds.stream().distinct().collect(Collectors.toList()));
-			totalDefectList.addAll(totalSprintReportDefects);
-			totalDefectList.addAll(totalSubTaskDefects);
-			resultListMap.put(TOTAL_SPRINT_SUBTASK_DEFECTS, totalSubTaskDefects);
-			resultListMap.put(SUB_TASK_BUGS_HISTORY, subTaskBugsCustomHistory);
-			resultListMap.put(SPRINT_WISE_SPRINT_DETAILS, sprintDetails);
-			resultListMap.put(STORY_LIST, jiraIssueRepository.findIssueAndDescByNumber(new ArrayList<>(totalIssue)));
-		}
-		// Find defect with rejected status. Avoided making dB query
-		if (!defectResolutionRejectionMap.isEmpty()) {
-			List<JiraIssue> canceledDefectList = new ArrayList<>();
-			getDefectsWithDrop(defectResolutionRejectionMap, totalDefectList, canceledDefectList);
-
-			setDbQueryLogger(totalDefectList, canceledDefectList);
-
-			resultListMap.put(REJECTED_DEFECT_DATA, canceledDefectList);
-		} else {
-			resultListMap.put(REJECTED_DEFECT_DATA, Lists.newArrayList());
-		}
-
+			totalSubTaskDefects.addAll((List<JiraIssue>) result.getOrDefault(TOTAL_SPRINT_SUBTASK_DEFECTS, new ArrayList<>()));
+			subTaskBugsCustomHistory
+					.addAll((List<JiraIssueCustomHistory>) result.getOrDefault(SUB_TASK_BUGS_HISTORY, new ArrayList<>()));
+			List<SprintDetails> sprintDetailsList = (List<SprintDetails>) result.getOrDefault(SPRINT_WISE_SPRINT_DETAILS,
+					new ArrayList<>());
+			sprintDetails.addAll(sprintDetailsList.stream().filter(sprint -> sprintList.contains(sprint.getSprintID()))
+					.collect(Collectors.toSet()));
+			totalIssue.addAll((List<JiraIssue>) result.getOrDefault(STORY_LIST, new ArrayList<>()));
+			canceledDefectList.addAll((List<JiraIssue>) result.getOrDefault(REJECTED_DEFECT_DATA, new ArrayList<>()));
+			totalDefectList.addAll((List<JiraIssue>) result.getOrDefault(TOTAL_DEFECT_LIST, new ArrayList<>()));
+		});
+		resultListMap.put(TOTAL_SPRINT_SUBTASK_DEFECTS, totalSubTaskDefects);
+		resultListMap.put(SUB_TASK_BUGS_HISTORY, subTaskBugsCustomHistory);
+		resultListMap.put(SPRINT_WISE_SPRINT_DETAILS, sprintDetails);
+		resultListMap.put(STORY_LIST, totalIssue);
+		resultListMap.put(REJECTED_DEFECT_DATA, canceledDefectList);
 		resultListMap.put(TOTAL_DEFECT_LIST, totalDefectList);
+
+		setDbQueryLogger(totalDefectList, canceledDefectList);
+
 		return resultListMap;
 	}
 
@@ -329,24 +242,25 @@ public class DRRServiceImpl extends JiraKPIService<Double, List<Object>, Map<Str
 			// For finding the completed Defect we are taking combination of DodStatus &
 			// DefectRejectionStatus
 			List<String> dodStatus = Optional.ofNullable(fieldMapping).map(FieldMapping::getJiraDodKPI37)
-					.orElse(Collections.emptyList()).stream().map(String::toLowerCase).collect(Collectors.toList());
+					.orElse(Collections.emptyList()).stream().map(String::toLowerCase).toList();
 			String defectRejectionStatus = Optional.ofNullable(fieldMapping)
 					.map(FieldMapping::getJiraDefectRejectionStatusKPI37).orElse("");
 			List<String> dodAndDefectRejStatus = new ArrayList<>(dodStatus);
 			if (StringUtils.isNotEmpty(defectRejectionStatus))
 				dodAndDefectRejStatus.add(defectRejectionStatus.toLowerCase());
 
-			List<JiraIssue> sprintSubtask = KpiDataHelper.getTotalSprintSubTasks(totalSubtaskList.stream()
-					.filter(jiraIssue -> CollectionUtils.isNotEmpty(jiraIssue.getSprintIdList())
-							&& jiraIssue.getSprintIdList().contains(sd.getSprintID().split("_")[0]))
-					.collect(Collectors.toList()), sd, totalSubtaskHistory, dodAndDefectRejStatus);
+			List<JiraIssue> sprintSubtask = KpiDataHelper.getTotalSprintSubTasks(
+					totalSubtaskList.stream()
+							.filter(jiraIssue -> CollectionUtils.isNotEmpty(jiraIssue.getSprintIdList()) &&
+									jiraIssue.getSprintIdList().contains(sd.getSprintID().split("_")[0]))
+							.collect(Collectors.toList()),
+					sd, totalSubtaskHistory, dodAndDefectRejStatus);
 
 			List<JiraIssue> sprintRejectedDefects = canceledDefectList.stream()
 					.filter(element -> totalSprintIssues.contains(element.getNumber())).collect(Collectors.toList());
 
 			List<JiraIssue> sprintRejectedSubtaskDefect = sprintSubtask.stream()
-					.filter(jiraIssue -> canceledDefectNumbers.contains(jiraIssue.getNumber()))
-					.collect(Collectors.toList());
+					.filter(jiraIssue -> canceledDefectNumbers.contains(jiraIssue.getNumber())).toList();
 
 			sprintRejectedDefects.addAll(sprintRejectedSubtaskDefect);
 
@@ -355,8 +269,8 @@ public class DRRServiceImpl extends JiraKPIService<Double, List<Object>, Map<Str
 					.filter(element -> dodAndDefectRejStatus.contains(element.getStatus().toLowerCase()))
 					.collect(Collectors.toList());
 
-			sprintCompletedDefects.addAll(KpiDataHelper.getCompletedSubTasksByHistory(sprintSubtask,
-					totalSubtaskHistory, sd, dodAndDefectRejStatus, new HashMap<>()));
+			sprintCompletedDefects.addAll(KpiDataHelper.getCompletedSubTasksByHistory(sprintSubtask, totalSubtaskHistory, sd,
+					dodAndDefectRejStatus, new HashMap<>()));
 
 			List<JiraIssue> sprintWiseRejectedDefectList = new ArrayList<>();
 			List<JiraIssue> sprintWiseCompletedDefectList = new ArrayList<>();
@@ -368,8 +282,7 @@ public class DRRServiceImpl extends JiraKPIService<Double, List<Object>, Map<Str
 
 			sprintWiseRejectedAndTotalDefects.put(REJECTED_DEFECT_DATA, sprintRejectedDefects);
 			sprintWiseRejectedAndTotalDefects.put(CLOSED_DEFECT_DATA, sprintCompletedDefects);
-			if (CollectionUtils.isNotEmpty(sprintRejectedDefects)
-					&& CollectionUtils.isNotEmpty(sprintCompletedDefects)) {
+			if (CollectionUtils.isNotEmpty(sprintRejectedDefects) && CollectionUtils.isNotEmpty(sprintCompletedDefects)) {
 
 				drrForCurrentLeaf = calculateKPIMetrics(sprintWiseRejectedAndTotalDefects);
 			}
@@ -382,23 +295,21 @@ public class DRRServiceImpl extends JiraKPIService<Double, List<Object>, Map<Str
 			setSprintWiseLogger(sprint, sprintWiseCompletedDefectList, sprintWiseRejectedDefectList);
 
 			sprintWiseDRRMap.put(sprint, drrForCurrentLeaf);
-			setHowerMap(sprintWiseHowerMap, sprint, sprintWiseRejectedDefectList, sprintWiseCompletedDefectList);
+			setHoverMap(sprintWiseHowerMap, sprint, sprintWiseRejectedDefectList, sprintWiseCompletedDefectList);
 		});
 
 		sprintLeafNodeList.forEach(node -> {
 			// Leaf node wise data
 			String trendLineName = node.getProjectFilter().getName();
-			Pair<String, String> currentNodeIdentifier = Pair
-					.of(node.getProjectFilter().getBasicProjectConfigId().toString(), node.getSprintFilter().getId());
+			Pair<String, String> currentNodeIdentifier = Pair.of(node.getProjectFilter().getBasicProjectConfigId().toString(),
+					node.getSprintFilter().getId());
 
 			double drrForCurrentLeaf;
 
 			if (sprintWiseDRRMap.containsKey(currentNodeIdentifier)) {
 				drrForCurrentLeaf = sprintWiseDRRMap.get(currentNodeIdentifier);
-				List<JiraIssue> sprintWiseRejectedDefectList = sprintWiseRejectedDefectListMap
-						.get(currentNodeIdentifier);
-				List<JiraIssue> sprintWiseCompletedDefectList = sprintWiseCompletedDefectListMap
-						.get(currentNodeIdentifier);
+				List<JiraIssue> sprintWiseRejectedDefectList = sprintWiseRejectedDefectListMap.get(currentNodeIdentifier);
+				List<JiraIssue> sprintWiseCompletedDefectList = sprintWiseCompletedDefectListMap.get(currentNodeIdentifier);
 				List<JiraIssue> sprintWiseCompAndRejectedList = new ArrayList<>(sprintWiseCompletedDefectList);
 				sprintWiseCompAndRejectedList.addAll(sprintWiseRejectedDefectList);
 				populateExcelDataObject(requestTrackerId, node.getSprintFilter().getName(), excelData,
@@ -408,8 +319,8 @@ public class DRRServiceImpl extends JiraKPIService<Double, List<Object>, Map<Str
 				drrForCurrentLeaf = 0.0d;
 			}
 
-			log.debug("[DRR-SPRINT-WISE][{}]. DRR for sprint {}  is {}", requestTrackerId,
-					node.getSprintFilter().getName(), drrForCurrentLeaf);
+			log.debug("[DRR-SPRINT-WISE][{}]. DRR for sprint {}  is {}", requestTrackerId, node.getSprintFilter().getName(),
+					drrForCurrentLeaf);
 
 			DataCount dataCount = new DataCount();
 			dataCount.setData(String.valueOf(Math.round(drrForCurrentLeaf)));
@@ -422,11 +333,10 @@ public class DRRServiceImpl extends JiraKPIService<Double, List<Object>, Map<Str
 			dataCount.setHoverValue(sprintWiseHowerMap.get(currentNodeIdentifier));
 			mapTmp.get(node.getId()).setValue(new ArrayList<DataCount>(Arrays.asList(dataCount)));
 			trendValueList.add(dataCount);
-
 		});
 		kpiElement.setExcelData(excelData);
 		kpiElement.setExcelColumns(
-				KPIExcelColumn.DEFECT_REJECTION_RATE.getColumns(sprintLeafNodeList, cacheService, flterHelperService));
+				KPIExcelColumn.DEFECT_REJECTION_RATE.getColumns(sprintLeafNodeList, cacheService, filterHelperService));
 	}
 
 	/**
@@ -435,8 +345,8 @@ public class DRRServiceImpl extends JiraKPIService<Double, List<Object>, Map<Str
 	 * @param sprintLeafNodeList
 	 */
 	private void sortSprintLeafNodeListAsc(List<Node> sprintLeafNodeList) {
-		sprintLeafNodeList.sort((node1, node2) -> node1.getSprintFilter().getStartDate()
-				.compareTo(node2.getSprintFilter().getStartDate()));
+		sprintLeafNodeList.sort(
+				(node1, node2) -> node1.getSprintFilter().getStartDate().compareTo(node2.getSprintFilter().getStartDate()));
 	}
 
 	private void populateExcelDataObject(String requestTrackerId, String sprintName, List<KPIExcelData> excelData,
@@ -445,7 +355,7 @@ public class DRRServiceImpl extends JiraKPIService<Double, List<Object>, Map<Str
 		if (requestTrackerId.toLowerCase().contains(KPISource.EXCEL.name().toLowerCase())) {
 
 			Map<String, JiraIssue> totalDefectList = new HashMap<>();
-			sprintWiseCompAndRejectedList.stream().forEach(bugs -> totalDefectList.putIfAbsent(bugs.getNumber(), bugs));
+			sprintWiseCompAndRejectedList.forEach(bugs -> totalDefectList.putIfAbsent(bugs.getNumber(), bugs));
 			KPIExcelUtility.populateDefectRelatedExcelData(sprintName, totalDefectList, sprintWiseRejectedDefectList,
 					excelData, KPICode.DEFECT_REJECTION_RATE.getKpiId(), customApiConfig, storyList);
 		}
@@ -453,7 +363,6 @@ public class DRRServiceImpl extends JiraKPIService<Double, List<Object>, Map<Str
 
 	/**
 	 * Sets logger for data fetched from DB.
-	 *
 	 *
 	 * @param totalDefectList
 	 * @param canceledDefectList
@@ -467,7 +376,6 @@ public class DRRServiceImpl extends JiraKPIService<Double, List<Object>, Map<Str
 					totalDefectList.stream().map(JiraIssue::getNumber).collect(Collectors.toList()));
 			log.info("CanceledDefectList [{}]: {}", canceledDefectList.size(),
 					canceledDefectList.stream().map(JiraIssue::getNumber).collect(Collectors.toList()));
-			log.info(SEPARATOR_ASTERISK);
 			log.info("******************X----X*******************");
 		}
 	}
@@ -483,7 +391,6 @@ public class DRRServiceImpl extends JiraKPIService<Double, List<Object>, Map<Str
 			List<JiraIssue> sprintWiseRejectedDefectList) {
 
 		if (customApiConfig.getApplicationDetailedLogger().equalsIgnoreCase("on")) {
-			log.debug(SEPARATOR_ASTERISK);
 			log.debug("************* SPRINT WISE DRR *******************");
 			log.debug("Sprint: {}", sprint.getValue());
 			log.debug("SprintWiseCompletedDefectList[{}]: {}", sprintWiseCompletedDefectList.size(),
@@ -491,20 +398,19 @@ public class DRRServiceImpl extends JiraKPIService<Double, List<Object>, Map<Str
 			log.debug("SprintWiseRejectedDefectList[{}]: {}", sprintWiseRejectedDefectList.size(),
 					sprintWiseRejectedDefectList.stream().map(JiraIssue::getNumber).collect(Collectors.toList()));
 			log.debug(SEPARATOR_ASTERISK);
-			log.debug(SEPARATOR_ASTERISK);
 		}
 	}
 
 	/**
 	 * Sets map to show on hover of sprint node.
 	 *
-	 * @param sprintWiseHowerMap
+	 * @param sprintWiseHoverMap
 	 * @param sprint
 	 * @param rejected
 	 * @param completed
 	 */
-	private void setHowerMap(Map<Pair<String, String>, Map<String, Object>> sprintWiseHowerMap,
-			Pair<String, String> sprint, List<JiraIssue> rejected, List<JiraIssue> completed) {
+	private void setHoverMap(Map<Pair<String, String>, Map<String, Object>> sprintWiseHoverMap,
+							 Pair<String, String> sprint, List<JiraIssue> rejected, List<JiraIssue> completed) {
 		Map<String, Object> howerMap = new LinkedHashMap<>();
 		if (CollectionUtils.isNotEmpty(rejected)) {
 			howerMap.put(REJECTED, rejected.size());
@@ -516,7 +422,7 @@ public class DRRServiceImpl extends JiraKPIService<Double, List<Object>, Map<Str
 		} else {
 			howerMap.put(COMPLETED, 0);
 		}
-		sprintWiseHowerMap.put(sprint, howerMap);
+		sprintWiseHoverMap.put(sprint, howerMap);
 	}
 
 	@Override
@@ -528,5 +434,4 @@ public class DRRServiceImpl extends JiraKPIService<Double, List<Object>, Map<Str
 	public Double calculateThresholdValue(FieldMapping fieldMapping) {
 		return calculateThresholdValue(fieldMapping.getThresholdValueKPI37(), KPICode.DEFECT_REJECTION_RATE.getKpiId());
 	}
-
 }
