@@ -19,7 +19,6 @@
 package com.publicissapient.kpidashboard.apis.jira.scrum.service;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -29,6 +28,8 @@ import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
+import com.publicissapient.kpidashboard.apis.common.service.KpiDataCacheService;
+import com.publicissapient.kpidashboard.apis.common.service.impl.KpiDataProvider;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.collections4.MapUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -37,13 +38,10 @@ import org.bson.types.ObjectId;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
-import com.publicissapient.kpidashboard.apis.appsetting.service.ConfigHelperService;
 import com.publicissapient.kpidashboard.apis.common.service.CacheService;
-import com.publicissapient.kpidashboard.apis.common.service.impl.KpiHelperService;
 import com.publicissapient.kpidashboard.apis.config.CustomApiConfig;
 import com.publicissapient.kpidashboard.apis.constant.Constant;
 import com.publicissapient.kpidashboard.apis.enums.Filters;
-import com.publicissapient.kpidashboard.apis.enums.JiraFeature;
 import com.publicissapient.kpidashboard.apis.enums.KPICode;
 import com.publicissapient.kpidashboard.apis.enums.KPIExcelColumn;
 import com.publicissapient.kpidashboard.apis.enums.KPISource;
@@ -56,9 +54,7 @@ import com.publicissapient.kpidashboard.apis.model.KpiElement;
 import com.publicissapient.kpidashboard.apis.model.KpiRequest;
 import com.publicissapient.kpidashboard.apis.model.Node;
 import com.publicissapient.kpidashboard.apis.model.TreeAggregatorDetail;
-import com.publicissapient.kpidashboard.apis.util.CommonUtils;
 import com.publicissapient.kpidashboard.apis.util.KPIExcelUtility;
-import com.publicissapient.kpidashboard.apis.util.KpiDataHelper;
 import com.publicissapient.kpidashboard.common.constant.CommonConstant;
 import com.publicissapient.kpidashboard.common.constant.NormalizedJira;
 import com.publicissapient.kpidashboard.common.model.application.DataCount;
@@ -66,15 +62,13 @@ import com.publicissapient.kpidashboard.common.model.application.DataCountGroup;
 import com.publicissapient.kpidashboard.common.model.application.FieldMapping;
 import com.publicissapient.kpidashboard.common.model.jira.JiraIssue;
 import com.publicissapient.kpidashboard.common.model.jira.SprintWiseStory;
-import com.publicissapient.kpidashboard.common.repository.jira.JiraIssueRepository;
 
 import lombok.extern.slf4j.Slf4j;
 
 /**
  * This class calculates the DSR and trend analysis of the DSR.
- * 
- * @author pkum34
  *
+ * @author pkum34
  */
 @Component
 @Slf4j
@@ -85,19 +79,21 @@ public class DSRServiceImpl extends JiraKPIService<Double, List<Object>, Map<Str
 	private static final String SPRINTSTORIES = "storyData";
 	private static final String UAT = "Escaped Defects";
 	private static final String TOTAL = "Total Defects";
-	private static final String QA = "QaKpi";
 	private static final String PROJFMAPPING = "projectFieldMapping";
 	public static final String STORY_LIST_WO_DROP = "storyList";
-	@Autowired
-	private JiraIssueRepository jiraIssueRepository;
-	@Autowired
-	private ConfigHelperService configHelperService;
-	@Autowired
-	private FilterHelperService flterHelperService;
+
+    @Autowired
+	private FilterHelperService filterHelperService;
 	@Autowired
 	private CacheService cacheService;
 	@Autowired
 	private CustomApiConfig customApiConfig;
+	@Autowired
+	private KpiDataCacheService kpiDataCacheService;
+	@Autowired
+	private KpiDataProvider kpiDataProvider;
+
+	private List<String> sprintIdList = Collections.synchronizedList(new ArrayList<>());
 
 	@Override
 	public String getQualifierType() {
@@ -105,14 +101,15 @@ public class DSRServiceImpl extends JiraKPIService<Double, List<Object>, Map<Str
 	}
 
 	@Override
-	public KpiElement getKpiData(KpiRequest kpiRequest, KpiElement kpiElement,
-			TreeAggregatorDetail treeAggregatorDetail) throws ApplicationException {
+	public KpiElement getKpiData(KpiRequest kpiRequest, KpiElement kpiElement, TreeAggregatorDetail treeAggregatorDetail)
+			throws ApplicationException {
 
 		List<DataCount> trendValueList = new ArrayList<>();
 		Node root = treeAggregatorDetail.getRoot();
 		Map<String, Node> mapTmp = treeAggregatorDetail.getMapTmp();
+		sprintIdList = treeAggregatorDetail.getMapOfListOfLeafNodes().get(CommonConstant.SPRINT_MASTER).stream()
+				.map(node -> node.getSprintFilter().getId()).collect(Collectors.toList());
 		treeAggregatorDetail.getMapOfListOfLeafNodes().forEach((k, v) -> {
-
 			if (Filters.getFilter(k) == Filters.SPRINT) {
 				sprintWiseLeafNodeValue(mapTmp, v, trendValueList, kpiElement, kpiRequest);
 			}
@@ -137,7 +134,7 @@ public class DSRServiceImpl extends JiraKPIService<Double, List<Object>, Map<Str
 		issueTypeProjectWiseDc.forEach((issueType, projectWiseDc) -> {
 			DataCountGroup dataCountGroup = new DataCountGroup();
 			List<DataCount> dataList = new ArrayList<>();
-			projectWiseDc.entrySet().stream().forEach(trend -> dataList.addAll(trend.getValue()));
+			projectWiseDc.entrySet().forEach(trend -> dataList.addAll(trend.getValue()));
 			dataCountGroup.setFilter(issueType);
 			dataCountGroup.setValue(dataList);
 			dataCountGroups.add(dataCountGroup);
@@ -152,119 +149,41 @@ public class DSRServiceImpl extends JiraKPIService<Double, List<Object>, Map<Str
 			KpiRequest kpiRequest) {
 
 		Map<String, Object> resultListMap = new HashMap<>();
-		Map<String, List<String>> mapOfFilters = new LinkedHashMap<>();
-		List<String> sprintList = new ArrayList<>();
-		List<String> basicProjectConfigIds = new ArrayList<>();
-		Map<String, Map<String, Object>> uniqueProjectMap = new HashMap<>();
-		Map<String, FieldMapping> projFieldMapping = new HashMap<>();
-		Map<String, Map<String, List<String>>> droppedDefects = new HashMap<>();
-		Map<String, List<String>> projectWisePriority = new HashMap<>();
-		Map<String, List<String>> configPriority = customApiConfig.getPriority();
-		Map<String, Set<String>> projectWiseRCA = new HashMap<>();
+		Map<ObjectId, List<String>> projectWiseSprints = new HashMap<>();
 		leafNodeList.forEach(leaf -> {
 			ObjectId basicProjectConfigId = leaf.getProjectFilter().getBasicProjectConfigId();
-			Map<String, Object> mapOfProjectFilters = new LinkedHashMap<>();
-			FieldMapping fieldMapping = configHelperService.getFieldMappingMap().get(basicProjectConfigId);
-			projFieldMapping.put(leaf.getProjectFilter().getBasicProjectConfigId().toString(), fieldMapping);
-			sprintList.add(leaf.getSprintFilter().getId());
-			basicProjectConfigIds.add(basicProjectConfigId.toString());
-
-			KpiHelperService.addPriorityProjectWise(projectWisePriority, configPriority, leaf,
-					fieldMapping.getDefectPriorityKPI35());
-			KpiHelperService.addRCAProjectWise(projectWiseRCA, leaf, fieldMapping.getIncludeRCAForKPI35());
-
-			mapOfProjectFilters.put(JiraFeature.ISSUE_TYPE.getFieldValueInFeature(),
-					CommonUtils.convertToPatternList(fieldMapping.getJiraIssueTypeKPI35()));
-			uniqueProjectMap.put(basicProjectConfigId.toString(), mapOfProjectFilters);
-			KpiHelperService.getDroppedDefectsFilters(droppedDefects, basicProjectConfigId,
-					fieldMapping.getResolutionTypeForRejectionKPI35(),
-					fieldMapping.getJiraDefectRejectionStatusKPI35());
+			String sprint = leaf.getSprintFilter().getId();
+			projectWiseSprints.putIfAbsent(basicProjectConfigId, new ArrayList<>());
+			projectWiseSprints.get(basicProjectConfigId).add(sprint);
 		});
-		/** additional filter **/
-		KpiDataHelper.createAdditionalFilterMap(kpiRequest, mapOfFilters, Constant.SCRUM, QA, flterHelperService);
-
-		mapOfFilters.put(JiraFeature.SPRINT_ID.getFieldValueInFeature(),
-				sprintList.stream().distinct().collect(Collectors.toList()));
-		mapOfFilters.put(JiraFeature.BASIC_PROJECT_CONFIG_ID.getFieldValueInFeature(),
-				basicProjectConfigIds.stream().distinct().collect(Collectors.toList()));
-
-		List<SprintWiseStory> sprintWiseStoryList = jiraIssueRepository.findIssuesGroupBySprint(mapOfFilters,
-				uniqueProjectMap, kpiRequest.getFilterToShowOnTrend(), QA);
-
-		List<JiraIssue> issuesBySprintAndType = jiraIssueRepository.findIssuesBySprintAndType(mapOfFilters,
-				uniqueProjectMap);
-		List<JiraIssue> storyListWoDrop = new ArrayList<>();
-		KpiHelperService.getDefectsWithoutDrop(droppedDefects, issuesBySprintAndType, storyListWoDrop);
-		KpiHelperService.removeRejectedStoriesFromSprint(sprintWiseStoryList, storyListWoDrop);
-		List<String> storyNumberList = new ArrayList<>();
-		sprintWiseStoryList.forEach(s -> storyNumberList.addAll(s.getStoryList()));
-
-		Map<String, List<String>> mapOfFiltersWithStoryIds = new LinkedHashMap<>();
-		mapOfFiltersWithStoryIds.put(JiraFeature.BASIC_PROJECT_CONFIG_ID.getFieldValueInFeature(),
-				basicProjectConfigIds.stream().distinct().collect(Collectors.toList()));
-		mapOfFiltersWithStoryIds.put(JiraFeature.ISSUE_TYPE.getFieldValueInFeature(),
-				Arrays.asList(NormalizedJira.DEFECT_TYPE.getValue()));
-
-		List<JiraIssue> totalDefectList = jiraIssueRepository.findIssuesByType(mapOfFiltersWithStoryIds);
-
-		List<JiraIssue> defectListWoDrop = new ArrayList<>();
+		
+		List<SprintWiseStory> sprintWiseStoryList = new ArrayList<>();
 		List<JiraIssue> remainingDefect = new ArrayList<>();
+		Map<String, FieldMapping> projFieldMapping = new HashMap<>();
+		List<JiraIssue> storyListWoDrop = new ArrayList<>();
+		boolean fetchCachedData = filterHelperService.isFilterSelectedTillSprintLevel(kpiRequest.getLevel(), false);
+		projectWiseSprints.forEach((basicProjectConfigId, sprintList) -> {
+			Map<String, Object> result;
+			if (fetchCachedData) { // fetch data from cache only if Filter is selected till Sprint
+				// level.
+				result = kpiDataCacheService.fetchDSRData(kpiRequest, basicProjectConfigId, sprintIdList,
+						KPICode.DEFECT_SEEPAGE_RATE.getKpiId());
+			} else { // fetch data from DB if filters below Sprint level (i.e. additional filters)
+				result = kpiDataProvider.fetchDSRData(kpiRequest, basicProjectConfigId, sprintList);
+			}
 
-		KpiHelperService.getDefectsWithoutDrop(droppedDefects, totalDefectList, defectListWoDrop);
-		exludePriorityDefect(projectWisePriority, projectWiseRCA, new HashSet<>(defectListWoDrop), remainingDefect);
-
+			sprintWiseStoryList.addAll((List<SprintWiseStory>) result.getOrDefault(SPRINTSTORIES, new ArrayList<>()));
+			remainingDefect.addAll((List<JiraIssue>) result.getOrDefault(TOTALBUGKEY, new ArrayList<>()));
+			projFieldMapping.put(basicProjectConfigId.toString(),
+					((Map<String, FieldMapping>) result.get(PROJFMAPPING)).get(basicProjectConfigId.toString()));
+			storyListWoDrop.addAll((List<JiraIssue>) result.getOrDefault(STORY_LIST_WO_DROP, new ArrayList<>()));
+		});
+		
 		resultListMap.put(SPRINTSTORIES, sprintWiseStoryList);
 		resultListMap.put(TOTALBUGKEY, remainingDefect);
 		resultListMap.put(PROJFMAPPING, projFieldMapping);
 		resultListMap.put(STORY_LIST_WO_DROP, storyListWoDrop);
 		return resultListMap;
-
-	}
-
-	private static void exludePriorityDefect(Map<String, List<String>> projectWisePriority,
-			Map<String, Set<String>> projectWiseRCA, Set<JiraIssue> defects, List<JiraIssue> remainingDefect) {
-		List<JiraIssue> remainingDefects = new ArrayList<>();
-		List<JiraIssue> rcaDefects = new ArrayList<>();
-
-		for (JiraIssue jiraIssue : defects) {
-			excludeSelectedPriorities(projectWisePriority, remainingDefects, jiraIssue);
-
-			// Filter priorityRemaining based on configured Root Causes (RCA) for the
-			// project, or include if no RCA is configured.
-			excludeSelectRCAJiraIssue(projectWiseRCA, rcaDefects, jiraIssue);
-		}
-
-		remainingDefects.stream().forEach(pi -> rcaDefects.stream().forEach(ri -> {
-			if (pi.getNumber().equalsIgnoreCase(ri.getNumber())) {
-				remainingDefect.add(pi);
-			}
-		}));
-
-	}
-
-	private static void excludeSelectedPriorities(Map<String, List<String>> projectWisePriority,
-			List<JiraIssue> remainingDefects, JiraIssue jiraIssue) {
-		if (CollectionUtils.isNotEmpty(projectWisePriority.get(jiraIssue.getBasicProjectConfigId()))) {
-			if (!(projectWisePriority.get(jiraIssue.getBasicProjectConfigId())
-					.contains(jiraIssue.getPriority().toLowerCase()))) {
-				remainingDefects.add(jiraIssue);
-			}
-		} else {
-			remainingDefects.add(jiraIssue);
-		}
-	}
-
-	private static void excludeSelectRCAJiraIssue(Map<String, Set<String>> projectWiseRCA, List<JiraIssue> rcaDefects,
-			JiraIssue jiraIssue) {
-		if (CollectionUtils.isNotEmpty(projectWiseRCA.get(jiraIssue.getBasicProjectConfigId()))) {
-			for (String toFindRca : jiraIssue.getRootCauseList()) {
-				if ((projectWiseRCA.get(jiraIssue.getBasicProjectConfigId()).contains(toFindRca.toLowerCase()))) {
-					rcaDefects.add(jiraIssue);
-				}
-			}
-		} else {
-			rcaDefects.add(jiraIssue);
-		}
 	}
 
 	@SuppressWarnings("unchecked")
@@ -288,15 +207,15 @@ public class DSRServiceImpl extends JiraKPIService<Double, List<Object>, Map<Str
 	/**
 	 * This method populates KPI value to sprint leaf nodes. It also gives the trend
 	 * analysis at sprint wise.
-	 * 
+	 *
 	 * @param mapTmp
-	 *            mapTmp
+	 *          mapTmp
 	 * @param kpiElement
-	 *            kpiElement
+	 *          kpiElement
 	 * @param sprintLeafNodeList
-	 *            sprintLeafNodeList
+	 *          sprintLeafNodeList
 	 * @param trendValueList
-	 *            trendValueList
+	 *          trendValueList
 	 */
 	@SuppressWarnings("unchecked")
 	private void sprintWiseLeafNodeValue(Map<String, Node> mapTmp, List<Node> sprintLeafNodeList,
@@ -304,8 +223,8 @@ public class DSRServiceImpl extends JiraKPIService<Double, List<Object>, Map<Str
 
 		String requestTrackerId = getRequestTrackerId();
 
-		Collections.sort(sprintLeafNodeList, (Node o1, Node o2) -> o1.getSprintFilter().getStartDate()
-				.compareTo(o2.getSprintFilter().getStartDate()));
+		Collections.sort(sprintLeafNodeList,
+				(Node o1, Node o2) -> o1.getSprintFilter().getStartDate().compareTo(o2.getSprintFilter().getStartDate()));
 		long time = System.currentTimeMillis();
 		Map<String, Object> defectDataListMap = fetchKPIDataFromDb(sprintLeafNodeList, null, null, kpiRequest);
 		log.info("DSR taking fetchKPIDataFromDb {}", System.currentTimeMillis() - time);
@@ -313,13 +232,13 @@ public class DSRServiceImpl extends JiraKPIService<Double, List<Object>, Map<Str
 		List<SprintWiseStory> sprintWiseStoryList = (List<SprintWiseStory>) defectDataListMap.get(SPRINTSTORIES);
 		Map<String, FieldMapping> projFieldMapping = (Map<String, FieldMapping>) defectDataListMap.get(PROJFMAPPING);
 
-		Map<Pair<String, String>, List<SprintWiseStory>> sprintWiseMap = sprintWiseStoryList.stream().collect(Collectors
-				.groupingBy(sws -> Pair.of(sws.getBasicProjectConfigId(), sws.getSprint()), Collectors.toList()));
+		Map<Pair<String, String>, List<SprintWiseStory>> sprintWiseMap = sprintWiseStoryList.stream().collect(
+				Collectors.groupingBy(sws -> Pair.of(sws.getBasicProjectConfigId(), sws.getSprint()), Collectors.toList()));
 		List<JiraIssue> totalStoryWoDrop = (List<JiraIssue>) defectDataListMap.get(STORY_LIST_WO_DROP);
 		List<JiraIssue> totalDefects = (List<JiraIssue>) defectDataListMap.get(TOTALBUGKEY);
 		Map<Pair<String, String>, List<JiraIssue>> unlinkedDefect = totalDefects.stream()
-				.filter(issue -> CollectionUtils.isEmpty(issue.getDefectStoryID())).collect(Collectors.groupingBy(
-						sws -> Pair.of(sws.getBasicProjectConfigId(), sws.getSprintID()), Collectors.toList()));
+				.filter(issue -> CollectionUtils.isEmpty(issue.getDefectStoryID())).collect(Collectors
+						.groupingBy(sws -> Pair.of(sws.getBasicProjectConfigId(), sws.getSprintID()), Collectors.toList()));
 
 		List<KPIExcelData> excelData = new ArrayList<>();
 
@@ -329,26 +248,22 @@ public class DSRServiceImpl extends JiraKPIService<Double, List<Object>, Map<Str
 			Map<String, List<DataCount>> dataCountMap = new HashMap<>();
 			String trendLineName = node.getProjectFilter().getName();
 			String currentSprintComponentId = node.getSprintFilter().getId();
-			Pair<String, String> currentNodeIdentifier = Pair
-					.of(node.getProjectFilter().getBasicProjectConfigId().toString(), currentSprintComponentId);
-			FieldMapping fieldMapping = projFieldMapping
-					.get(node.getProjectFilter().getBasicProjectConfigId().toString());
+			Pair<String, String> currentNodeIdentifier = Pair.of(node.getProjectFilter().getBasicProjectConfigId().toString(),
+					currentSprintComponentId);
+			FieldMapping fieldMapping = projFieldMapping.get(node.getProjectFilter().getBasicProjectConfigId().toString());
 
-			List<SprintWiseStory> sprintWiseStories = sprintWiseMap.getOrDefault(currentNodeIdentifier,
-					new ArrayList<>());
-			List<String> totalStoryIdList = new ArrayList<>();// totalstories
-			sprintWiseStories.stream().map(SprintWiseStory::getStoryList).collect(Collectors.toList())
+			List<SprintWiseStory> sprintWiseStories = sprintWiseMap.getOrDefault(currentNodeIdentifier, new ArrayList<>());
+			List<String> totalStoryIdList = new ArrayList<>(); // totalstories
+			sprintWiseStories.stream().map(SprintWiseStory::getStoryList).toList()
 					.forEach(totalStoryIdList::addAll);
 			List<JiraIssue> subCategoryWiseTotalBugList = totalDefects.stream()
 					.filter(f -> CollectionUtils.containsAny(f.getDefectStoryID(), totalStoryIdList))
 					.collect(Collectors.toList());
 
 			if (fieldMapping != null && !fieldMapping.isExcludeUnlinkedDefects()) {
-				subCategoryWiseTotalBugList
-						.addAll(unlinkedDefect.getOrDefault(currentNodeIdentifier, new ArrayList<>()));
+				subCategoryWiseTotalBugList.addAll(unlinkedDefect.getOrDefault(currentNodeIdentifier, new ArrayList<>()));
 			}
-			Map<String, List<JiraIssue>> uatDefect = checkUATDefect(subCategoryWiseTotalBugList, fieldMapping,
-					uatLabels);
+			Map<String, List<JiraIssue>> uatDefect = checkUATDefect(subCategoryWiseTotalBugList, fieldMapping, uatLabels);
 
 			Map<String, Double> finalMap = new HashMap<>();
 			Map<String, Object> overallHowerMap = new HashMap<>();
@@ -360,8 +275,7 @@ public class DSRServiceImpl extends JiraKPIService<Double, List<Object>, Map<Str
 					int totalDefectCount = subCategoryWiseTotalBugList.size();
 					Map<String, Object> howerMap = new HashMap<>();
 					Double dsrPercentage = 0d;
-					if (CollectionUtils.isNotEmpty(issueList)
-							&& CollectionUtils.isNotEmpty(subCategoryWiseTotalBugList)) {
+					if (CollectionUtils.isNotEmpty(issueList) && CollectionUtils.isNotEmpty(subCategoryWiseTotalBugList)) {
 						createDSRValidation(issueList, label, validationDataList);
 						int uatDefectCount = issueList.size();
 						howerMap.put(UAT, uatDefectCount);
@@ -393,8 +307,7 @@ public class DSRServiceImpl extends JiraKPIService<Double, List<Object>, Map<Str
 		});
 		kpiElement.setExcelData(excelData);
 		kpiElement.setExcelColumns(
-				KPIExcelColumn.DEFECT_SEEPAGE_RATE.getColumns(sprintLeafNodeList, cacheService, flterHelperService));
-
+				KPIExcelColumn.DEFECT_SEEPAGE_RATE.getColumns(sprintLeafNodeList, cacheService, filterHelperService));
 	}
 
 	private void createDSRValidation(List<JiraIssue> issueList, String label,
@@ -408,8 +321,7 @@ public class DSRServiceImpl extends JiraKPIService<Double, List<Object>, Map<Str
 
 		if (requestTrackerId.toLowerCase().contains(KPISource.EXCEL.name().toLowerCase())) {
 			Map<String, JiraIssue> totalBugList = new HashMap<>();
-			sprintWiseSubCategoryWiseTotalBugListMap.stream()
-					.forEach(bugs -> totalBugList.putIfAbsent(bugs.getNumber(), bugs));
+			sprintWiseSubCategoryWiseTotalBugListMap.forEach(bugs -> totalBugList.putIfAbsent(bugs.getNumber(), bugs));
 
 			KPIExcelUtility.populateDefectSeepageRateExcelData(node.getSprintFilter().getName(), totalBugList,
 					subCategoryWiseUatBugList, excelData, customApiConfig, totalStoryWoDrop);
@@ -454,24 +366,23 @@ public class DSRServiceImpl extends JiraKPIService<Double, List<Object>, Map<Str
 	private Map<String, List<JiraIssue>> checkUATDefect(List<JiraIssue> testCaseList, FieldMapping fieldMapping,
 			Set<String> labels) {
 		Map<String, List<JiraIssue>> uatMap = new HashMap<>();
-		if (null != fieldMapping && StringUtils.isNotEmpty(fieldMapping.getJiraBugRaisedByIdentification())
-				&& CollectionUtils.isNotEmpty(fieldMapping.getJiraBugRaisedByValue())) {
+		if (null != fieldMapping && StringUtils.isNotEmpty(fieldMapping.getJiraBugRaisedByIdentification()) &&
+				CollectionUtils.isNotEmpty(fieldMapping.getJiraBugRaisedByValue())) {
 			Set<String> jiraBugRaisedByValue = new HashSet<>();
 			fieldMapping.getJiraBugRaisedByValue().forEach(value -> jiraBugRaisedByValue.add(value.toLowerCase()));
 			labels.addAll(jiraBugRaisedByValue);
 			if (fieldMapping.getJiraBugRaisedByIdentification().trim().equalsIgnoreCase(Constant.LABELS)) {
 				testCaseList.stream()
-						.filter(testCase -> CollectionUtils.isNotEmpty(testCase.getLabels()) && testCase.getLabels()
-								.stream().anyMatch(label -> jiraBugRaisedByValue.contains(label.toLowerCase())))
-						.forEach(jIssue -> jIssue.getLabels().forEach(label -> uatMap
-								.computeIfAbsent(label.toLowerCase(), k -> new ArrayList<>()).add(jIssue)));
+						.filter(testCase -> CollectionUtils.isNotEmpty(testCase.getLabels()) &&
+								testCase.getLabels().stream().anyMatch(label -> jiraBugRaisedByValue.contains(label.toLowerCase())))
+						.forEach(jIssue -> jIssue.getLabels()
+								.forEach(label -> uatMap.computeIfAbsent(label.toLowerCase(), k -> new ArrayList<>()).add(jIssue)));
 
 			} else {
 				testCaseList.stream()
 						.filter(f -> NormalizedJira.THIRD_PARTY_DEFECT_VALUE.getValue()
 								.equalsIgnoreCase(f.getDefectRaisedBy()))
-						.collect(Collectors.toList()).stream()
-						.filter(issue -> CollectionUtils.isNotEmpty(issue.getUatDefectGroup()))
+						.toList().stream().filter(issue -> CollectionUtils.isNotEmpty(issue.getUatDefectGroup()))
 						.forEach(issue -> issue.getUatDefectGroup().forEach(label -> uatMap
 								.computeIfAbsent(label.toLowerCase(), k -> new ArrayList<>()).add(issue)));
 			}
@@ -490,5 +401,4 @@ public class DSRServiceImpl extends JiraKPIService<Double, List<Object>, Map<Str
 	public Double calculateThresholdValue(FieldMapping fieldMapping) {
 		return calculateThresholdValue(fieldMapping.getThresholdValueKPI35(), KPICode.DEFECT_SEEPAGE_RATE.getKpiId());
 	}
-
 }
