@@ -24,12 +24,12 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
 import org.apache.commons.collections4.CollectionUtils;
@@ -44,17 +44,18 @@ import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
 import com.publicissapient.kpidashboard.apis.abac.ProjectAccessManager;
 import com.publicissapient.kpidashboard.apis.abac.UserAuthorizedProjectsService;
+import com.publicissapient.kpidashboard.apis.appsetting.service.ConfigHelperService;
 import com.publicissapient.kpidashboard.apis.auth.service.AuthenticationService;
 import com.publicissapient.kpidashboard.apis.auth.token.TokenAuthenticationService;
 import com.publicissapient.kpidashboard.apis.capacity.service.CapacityMasterService;
 import com.publicissapient.kpidashboard.apis.cleanup.ToolDataCleanUpService;
 import com.publicissapient.kpidashboard.apis.cleanup.ToolDataCleanUpServiceFactory;
 import com.publicissapient.kpidashboard.apis.common.service.CacheService;
-import com.publicissapient.kpidashboard.apis.common.service.KpiDataCacheService;
 import com.publicissapient.kpidashboard.apis.constant.Constant;
 import com.publicissapient.kpidashboard.apis.enums.Filters;
 import com.publicissapient.kpidashboard.apis.errors.ProjectNotFoundException;
 import com.publicissapient.kpidashboard.apis.filter.service.FilterHelperService;
+import com.publicissapient.kpidashboard.apis.hierarchy.service.OrganizationHierarchyService;
 import com.publicissapient.kpidashboard.apis.model.ServiceResponse;
 import com.publicissapient.kpidashboard.apis.projectconfig.basic.model.HierarchyResponseDTO;
 import com.publicissapient.kpidashboard.apis.projectconfig.fieldmapping.service.FieldMappingService;
@@ -62,21 +63,28 @@ import com.publicissapient.kpidashboard.apis.projectconfig.projecttoolconfig.ser
 import com.publicissapient.kpidashboard.apis.rbac.accessrequests.service.AccessRequestsHelperService;
 import com.publicissapient.kpidashboard.apis.repotools.service.RepoToolsConfigServiceImpl;
 import com.publicissapient.kpidashboard.apis.testexecution.service.TestExecutionService;
+import com.publicissapient.kpidashboard.apis.userboardconfig.service.UserBoardConfigService;
 import com.publicissapient.kpidashboard.common.constant.CommonConstant;
 import com.publicissapient.kpidashboard.common.constant.ProcessorConstants;
 import com.publicissapient.kpidashboard.common.model.ProcessorExecutionTraceLog;
 import com.publicissapient.kpidashboard.common.model.application.FieldMapping;
 import com.publicissapient.kpidashboard.common.model.application.HierarchyLevel;
 import com.publicissapient.kpidashboard.common.model.application.HierarchyValue;
+import com.publicissapient.kpidashboard.common.model.application.OrganizationHierarchy;
 import com.publicissapient.kpidashboard.common.model.application.ProjectBasicConfig;
+import com.publicissapient.kpidashboard.common.model.application.ProjectHierarchy;
 import com.publicissapient.kpidashboard.common.model.application.ProjectToolConfig;
+import com.publicissapient.kpidashboard.common.model.application.dto.HierarchyValueDTO;
 import com.publicissapient.kpidashboard.common.model.application.dto.ProjectBasicConfigDTO;
 import com.publicissapient.kpidashboard.common.model.jira.AssigneeDetails;
 import com.publicissapient.kpidashboard.common.model.jira.BoardMetadata;
 import com.publicissapient.kpidashboard.common.model.jira.SprintDetails;
 import com.publicissapient.kpidashboard.common.model.rbac.AccessRequest;
 import com.publicissapient.kpidashboard.common.model.rbac.ProjectBasicConfigNode;
+import com.publicissapient.kpidashboard.common.repository.application.AccountHierarchyRepository;
+import com.publicissapient.kpidashboard.common.repository.application.HierarchyLevelRepository;
 import com.publicissapient.kpidashboard.common.repository.application.ProjectBasicConfigRepository;
+import com.publicissapient.kpidashboard.common.repository.application.ProjectHierarchyRepository;
 import com.publicissapient.kpidashboard.common.repository.application.ProjectToolConfigRepository;
 import com.publicissapient.kpidashboard.common.repository.jira.AssigneeDetailsRepository;
 import com.publicissapient.kpidashboard.common.repository.jira.BoardMetadataRepository;
@@ -89,7 +97,6 @@ import lombok.extern.slf4j.Slf4j;
 
 /**
  * @author narsingh9
- *
  */
 @Service
 @Slf4j
@@ -103,9 +110,6 @@ public class ProjectBasicConfigServiceImpl implements ProjectBasicConfigService 
 
 	@Autowired
 	private CacheService cacheService;
-
-	@Autowired
-	private KpiDataCacheService kpiDataCacheService;
 
 	@Autowired
 	private UserAuthorizedProjectsService userAuthorizedProjectsService;
@@ -159,55 +163,108 @@ public class ProjectBasicConfigServiceImpl implements ProjectBasicConfigService 
 	private HappinessKpiDataRepository happinessKpiDataRepository;
 
 	@Autowired
+	private OrganizationHierarchyService organizationHierarchyService;
+	@Autowired
+	private AccountHierarchyRepository accountHierarchyRepository;
+	@Autowired
+	private ProjectHierarchyRepository projectHierarchyRepository;
+	@Autowired
+	private HierarchyLevelRepository hierarchyLevelRepository;
+
+	@Autowired
+	private ConfigHelperService configHelperService;
+
+	@Autowired
 	private ProjectToolConfigServiceImpl projectToolConfigService;
+
+	@Autowired
+	private UserBoardConfigService userBoardConfigService;
 
 	/**
 	 * method to save basic configuration
 	 *
 	 * @param projectBasicConfigDTO
-	 *            object to be saved
+	 *          object to be saved
 	 * @return ServiceResponse object
 	 */
 	@Override
 	public ServiceResponse addBasicConfig(ProjectBasicConfigDTO projectBasicConfigDTO) {
 		ServiceResponse response;
-		ProjectBasicConfig basicConfig = basicConfigRepository
-				.findByProjectName(projectBasicConfigDTO.getProjectName());
+		ProjectBasicConfig basicConfig = null;
+		if (StringUtils.isNotEmpty(projectBasicConfigDTO.getProjectNodeId())) {
+			basicConfig = basicConfigRepository.findByProjectNodeId(projectBasicConfigDTO.getProjectNodeId());
+		}
 		String username = authenticationService.getLoggedInUser();
 		if (basicConfig != null) {
 			response = new ServiceResponse(false, "Try with different Project name.", null);
 		} else {
+			tokenAuthenticationService.updateExpiryDate(username, LocalDateTime.now().toString());
+			String accessRoleOfParent = projectAccessManager.getAccessRoleOfNearestParent(projectBasicConfigDTO, username);
 			ModelMapper mapper = new ModelMapper();
 			basicConfig = mapper.map(projectBasicConfigDTO, ProjectBasicConfig.class);
 			basicConfig.setCreatedAt(DateUtil.dateTimeFormatter(LocalDateTime.now(), DateUtil.TIME_FORMAT));
 			basicConfig.setCreatedBy(authenticationService.getLoggedInUser());
-			tokenAuthenticationService.updateExpiryDate(username, LocalDateTime.now().toString());
-			String accessRoleOfParent = projectAccessManager.getAccessRoleOfNearestParent(basicConfig, username);
-
+			if (StringUtils.isEmpty(projectBasicConfigDTO.getProjectNodeId())) {
+				basicConfig.setProjectNodeId(UUID.randomUUID().toString());
+			}
 			if (accessRoleOfParent == null) {
 
 				ProjectBasicConfig savedProjectBasicConfig = saveBasicConfig(basicConfig);
+				configHelperService.updateCacheProjectBasicConfig(basicConfig);
 				cloneProjectToolConfigAndDependencies(savedProjectBasicConfig);
 				if (!projectAccessManager.getUserInfo(username).getAuthorities().contains(Constant.ROLE_SUPERADMIN)) {
 					addNewProjectIntoUserInfo(savedProjectBasicConfig, username);
 				}
-				performFilterOperation(basicConfigDtoCreation(savedProjectBasicConfig, mapper), false);
+				addProjectNodeToOrganizationHierarchy(projectBasicConfigDTO, basicConfig.getProjectNodeId());
 				response = new ServiceResponse(true, "Added Successfully.", savedProjectBasicConfig);
 
-			} else if (Constant.ROLE_SUPERADMIN.equals(accessRoleOfParent)
-					|| Constant.ROLE_PROJECT_ADMIN.equals(accessRoleOfParent)) {
+			} else if (Constant.ROLE_SUPERADMIN.equals(accessRoleOfParent) ||
+					Constant.ROLE_PROJECT_ADMIN.equals(accessRoleOfParent)) {
 				ProjectBasicConfig savedProjectBasicConfig = saveBasicConfig(basicConfig);
+				configHelperService.updateCacheProjectBasicConfig(basicConfig);
 				cloneProjectToolConfigAndDependencies(savedProjectBasicConfig);
-				performFilterOperation(basicConfigDtoCreation(savedProjectBasicConfig, mapper), false);
+				addProjectNodeToOrganizationHierarchy(projectBasicConfigDTO, basicConfig.getProjectNodeId());
 				response = new ServiceResponse(true, "Added Successfully.", savedProjectBasicConfig);
 
 			} else {
-				response = new ServiceResponse(false,
-						"You do not have admin access to any of selected hierarchy levels", basicConfig);
-
+				response = new ServiceResponse(false, "You do not have admin access to any of selected hierarchy levels",
+						basicConfig);
 			}
 		}
 		return response;
+	}
+
+	/**
+	 * add new ProjectNode if not already present in OrganizationHierarchy
+	 *
+	 * @param projectBasicConfigDTO
+	 *          ProjectBasicConfigDTO
+	 * @param projectNodeId
+	 *          String
+	 */
+	private void addProjectNodeToOrganizationHierarchy(ProjectBasicConfigDTO projectBasicConfigDTO,
+			String projectNodeId) {
+		if (StringUtils.isEmpty(projectBasicConfigDTO.getProjectNodeId())) {
+			Optional<HierarchyValueDTO> maxLevel = projectBasicConfigDTO.getHierarchy().stream()
+					.max(Comparator.comparing(hierarchyValue -> hierarchyValue.getHierarchyLevel().getLevel()));
+			OrganizationHierarchy newOrganizationHierarchy = new OrganizationHierarchy();
+			maxLevel.ifPresent(ml -> newOrganizationHierarchy.setParentId(ml.getOrgHierarchyNodeId()));
+			newOrganizationHierarchy.setNodeId(projectNodeId);
+			newOrganizationHierarchy.setHierarchyLevelId(CommonConstant.HIERARCHY_LEVEL_ID_PROJECT);
+			newOrganizationHierarchy.setNodeName(projectBasicConfigDTO.getProjectName());
+			newOrganizationHierarchy.setNodeDisplayName(projectBasicConfigDTO.getProjectDisplayName());
+			newOrganizationHierarchy.setCreatedDate(LocalDateTime.now());
+			newOrganizationHierarchy.setModifiedDate(LocalDateTime.now());
+			organizationHierarchyService.save(newOrganizationHierarchy);
+			clearOrgHierarchyCache();
+		}
+	}
+
+	private void clearOrgHierarchyCache() {
+		cacheService.clearCache(CommonConstant.CACHE_ACCOUNT_HIERARCHY);
+		cacheService.clearCache(CommonConstant.CACHE_ACCOUNT_HIERARCHY_KANBAN);
+		cacheService.clearCache(CommonConstant.CACHE_ORGANIZATION_HIERARCHY);
+		configHelperService.loadConfigData();
 	}
 
 	/**
@@ -215,7 +272,7 @@ public class ProjectBasicConfigServiceImpl implements ProjectBasicConfigService 
 	 * Project
 	 *
 	 * @param savedProjectBasicConfig
-	 *            savedProjectBasicConfig
+	 *          savedProjectBasicConfig
 	 */
 	private void cloneProjectToolConfigAndDependencies(ProjectBasicConfig savedProjectBasicConfig) {
 		if (savedProjectBasicConfig.getClonedFrom() == null) {
@@ -239,17 +296,15 @@ public class ProjectBasicConfigServiceImpl implements ProjectBasicConfigService 
 		List<String> scmToolList = Arrays.asList(Constant.TOOL_GITHUB, Constant.TOOL_GITLAB, Constant.TOOL_BITBUCKET,
 				Constant.TOOL_AZUREREPO);
 		for (ProjectToolConfig toolConfig : toolConfigList) {
-			if (scmToolList.contains(toolConfig.getToolName()) && savedProjectBasicConfig.isDeveloperKpiEnabled())
+			if (savedProjectBasicConfig.isDeveloperKpiEnabled() && scmToolList.contains(toolConfig.getToolName()))
 				continue;
 			try {
 				ProjectToolConfig clonedToolConfig = toolConfig.clone();
 				clonedToolConfig.setId(null);
 				clonedToolConfig.setBasicProjectConfigId(savedProjectBasicConfig.getId());
-				clonedToolConfig
-						.setCreatedAt(DateUtil.dateTimeFormatter(LocalDateTime.now(), CommonConstant.TIME_FORMAT));
+				clonedToolConfig.setCreatedAt(DateUtil.dateTimeFormatter(LocalDateTime.now(), CommonConstant.TIME_FORMAT));
 				clonedToolConfig.setCreatedBy(authenticationService.getLoggedInUser());
-				clonedToolConfig
-						.setUpdatedAt(DateUtil.dateTimeFormatter(LocalDateTime.now(), CommonConstant.TIME_FORMAT));
+				clonedToolConfig.setUpdatedAt(DateUtil.dateTimeFormatter(LocalDateTime.now(), CommonConstant.TIME_FORMAT));
 				clonedToolConfig.setProjectId(savedProjectBasicConfig.getId().toString());
 				clonedToolConfigs.add(clonedToolConfig);
 			} catch (CloneNotSupportedException e) {
@@ -264,8 +319,8 @@ public class ProjectBasicConfigServiceImpl implements ProjectBasicConfigService 
 			List<ProjectToolConfig> clonedToolConfigs) {
 		FieldMapping originalFieldMapping = fieldMappingService
 				.getFieldMappingByBasicconfigId(savedProjectBasicConfig.getClonedFrom().toString());
-		Optional<ProjectToolConfig> toolConfigOptional = clonedToolConfigs.stream().filter(
-				tool -> Constant.TOOL_JIRA.equals(tool.getToolName()) || Constant.TOOL_AZURE.equals(tool.getToolName()))
+		Optional<ProjectToolConfig> toolConfigOptional = clonedToolConfigs.stream()
+				.filter(tool -> Constant.TOOL_JIRA.equals(tool.getToolName()) || Constant.TOOL_AZURE.equals(tool.getToolName()))
 				.findFirst();
 
 		if (originalFieldMapping != null && toolConfigOptional.isPresent()) {
@@ -274,8 +329,7 @@ public class ProjectBasicConfigServiceImpl implements ProjectBasicConfigService 
 				clonedFieldMapping.setId(null);
 				clonedFieldMapping.setProjectToolConfigId(toolConfigOptional.get().getId());
 				clonedFieldMapping.setBasicProjectConfigId(savedProjectBasicConfig.getId());
-				clonedFieldMapping
-						.setUpdatedAt(DateUtil.dateTimeFormatter(LocalDateTime.now(), CommonConstant.TIME_FORMAT));
+				clonedFieldMapping.setUpdatedAt(DateUtil.dateTimeFormatter(LocalDateTime.now(), CommonConstant.TIME_FORMAT));
 				clonedFieldMapping.setUpdatedBy(authenticationService.getLoggedInUser());
 				clonedFieldMapping.setProjectId(savedProjectBasicConfig.getId().toString());
 				fieldMappingService.saveFieldMapping(clonedFieldMapping);
@@ -289,8 +343,8 @@ public class ProjectBasicConfigServiceImpl implements ProjectBasicConfigService 
 			List<ProjectToolConfig> clonedToolConfigs) {
 		BoardMetadata originalBoardMetadata = boardMetadataRepository
 				.findByProjectBasicConfigId(savedProjectBasicConfig.getClonedFrom());
-		Optional<ProjectToolConfig> toolConfigOptional = clonedToolConfigs.stream().filter(
-				tool -> Constant.TOOL_JIRA.equals(tool.getToolName()) || Constant.TOOL_AZURE.equals(tool.getToolName()))
+		Optional<ProjectToolConfig> toolConfigOptional = clonedToolConfigs.stream()
+				.filter(tool -> Constant.TOOL_JIRA.equals(tool.getToolName()) || Constant.TOOL_AZURE.equals(tool.getToolName()))
 				.findFirst();
 
 		if (originalBoardMetadata != null && toolConfigOptional.isPresent()) {
@@ -318,13 +372,14 @@ public class ProjectBasicConfigServiceImpl implements ProjectBasicConfigService 
 	 * method to update basic configuration
 	 *
 	 * @param projectBasicConfigDTO
-	 *            for updation
+	 *          for updation
 	 * @return ServiceResponse object
 	 */
 	@Override
 	public ServiceResponse updateBasicConfig(String basicConfigId, ProjectBasicConfigDTO projectBasicConfigDTO) {
 		ServiceResponse response;
 		Optional<ProjectBasicConfig> savedConfigOpt = basicConfigRepository.findById(new ObjectId(basicConfigId));
+		// HB : todo remove projectName condition
 		ProjectBasicConfig diffIdSameName = basicConfigRepository
 				.findByProjectNameAndIdNot(projectBasicConfigDTO.getProjectName(), new ObjectId(basicConfigId));
 		if (savedConfigOpt.isPresent()) {
@@ -332,6 +387,16 @@ public class ProjectBasicConfigServiceImpl implements ProjectBasicConfigService 
 				ProjectBasicConfig savedConfig = savedConfigOpt.get();
 				ModelMapper mapper = new ModelMapper();
 				ProjectBasicConfig basicConfig = mapper.map(projectBasicConfigDTO, ProjectBasicConfig.class);
+				// AP: Temporary workaround till UI passes the new field
+				if (StringUtils.isEmpty(projectBasicConfigDTO.getProjectNodeId())) {
+					basicConfig.setProjectNodeId(savedConfigOpt.get().getProjectNodeId());
+				}
+
+				// UI providing changed display name value to original project name as well,
+				// which will require more effort so workaround
+				basicConfig.setProjectName(savedConfig.getProjectName());
+
+				// AP: Temporary workaround end
 				if (isAssigneeUpdated(basicConfig, savedConfig)) {
 					List<ProcessorExecutionTraceLog> traceLogs = processorExecutionTraceLogRepository
 							.findByProcessorNameAndBasicProjectConfigIdIn(ProcessorConstants.JIRA,
@@ -345,18 +410,21 @@ public class ProjectBasicConfigServiceImpl implements ProjectBasicConfigService 
 						}
 						processorExecutionTraceLogRepository.saveAll(traceLogs);
 					}
-					AssigneeDetails assigneeDetails = assigneeDetailsRepository
-							.findByBasicProjectConfigId(basicConfigId);
+					AssigneeDetails assigneeDetails = assigneeDetailsRepository.findByBasicProjectConfigId(basicConfigId);
 					if (assigneeDetails != null) {
 						assigneeDetailsRepository.delete(assigneeDetails);
 					}
 				}
+				basicConfig.setCreatedBy(savedConfig.getCreatedBy());
 				basicConfig.setCreatedAt(savedConfig.getCreatedAt());
 				basicConfig.setUpdatedAt(DateUtil.dateTimeFormatter(LocalDateTime.now(), DateUtil.TIME_FORMAT));
 				basicConfig.setUpdatedBy(authenticationService.getLoggedInUser());
 				ProjectBasicConfig updatedBasicConfig = basicConfigRepository.save(basicConfig);
-				performFilterOperation(basicConfigDtoCreation(updatedBasicConfig, mapper), true);
-				// clear kpi data cache for the project for all KPIs
+
+				OrganizationHierarchy orgHierarchy = organizationHierarchyService.findByNodeId(basicConfig.getProjectNodeId());
+
+				configHelperService.updateCacheProjectBasicConfig(basicConfig);
+				updateProjectNameInOrgHierarchy(basicConfig, orgHierarchy);
 				response = new ServiceResponse(true, "Updated Successfully.", updatedBasicConfig);
 			} else {
 				response = new ServiceResponse(false, "Try with different project name.", null);
@@ -367,58 +435,33 @@ public class ProjectBasicConfigServiceImpl implements ProjectBasicConfigService 
 		return response;
 	}
 
+	private void updateProjectNameInProjectHierch(ProjectBasicConfig savedConfigOpt, ProjectBasicConfig basicConfig,
+			List<ProjectHierarchy> projectHierarchyList) {
+		if (CollectionUtils.isNotEmpty(projectHierarchyList)) {
+			projectHierarchyList.stream().forEach(projectHierarchy -> {
+				if (projectHierarchy.getNodeDisplayName().contains(savedConfigOpt.getProjectDisplayName())) {
+					projectHierarchy.setNodeDisplayName(projectHierarchy.getNodeDisplayName()
+							.replace(savedConfigOpt.getProjectDisplayName(), basicConfig.getProjectDisplayName()));
+				}
+			});
+
+			projectHierarchyRepository.saveAll(projectHierarchyList);
+			cacheService.clearCache(CommonConstant.CACHE_PROJECT_HIERARCHY);
+		}
+	}
+
+	private void updateProjectNameInOrgHierarchy(ProjectBasicConfig basicConfig, OrganizationHierarchy orgHierarchy) {
+		if (orgHierarchy != null) {
+			orgHierarchy.setNodeDisplayName(basicConfig.getProjectDisplayName());
+			organizationHierarchyService.save(orgHierarchy);
+			clearOrgHierarchyCache();
+			cleanAllCache();
+		}
+	}
+
 	private boolean isAssigneeUpdated(ProjectBasicConfig unsavedBasicConfig, ProjectBasicConfig savedConfig) {
 
 		return unsavedBasicConfig.isSaveAssigneeDetails() != savedConfig.isSaveAssigneeDetails();
-	}
-
-	/**
-	 * method to perform filter operation
-	 *
-	 * @param basicConfig
-	 * @param filterCleanRequired
-	 */
-	private void performFilterOperation(final ProjectBasicConfigDTO basicConfig, boolean filterCleanRequired) {
-		if (filterCleanRequired) {
-			filterHelperService.cleanFilterData(basicConfig);
-		}
-		filterHelperService.filterCreation(basicConfig);
-		clearCache(basicConfig);
-	}
-
-	/**
-	 * Clears filter and jira related cache.
-	 *
-	 * @param basicConfig
-	 *            ProjectConfig
-	 */
-	private void clearCache(final ProjectBasicConfigDTO basicConfig) {
-		if (basicConfig.getIsKanban()) {
-			cacheService.clearCache(CommonConstant.CACHE_ACCOUNT_HIERARCHY_KANBAN);
-			cacheService.clearCache(CommonConstant.JIRAKANBAN_KPI_CACHE);
-		} else {
-			cacheService.clearCache(CommonConstant.JIRA_KPI_CACHE);
-			cacheService.clearCache(CommonConstant.CACHE_ACCOUNT_HIERARCHY);
-		}
-		cacheService.clearCache(CommonConstant.CACHE_PROJECT_CONFIG_MAP);
-		cacheService.clearCache(CommonConstant.CACHE_PROJECT_BASIC_TREE);
-		cacheService.clearCache(Constant.CACHE_PROJECT_KPI_DATA);
-		if (basicConfig.getClonedFrom() != null) {
-			cacheService.clearCache(CommonConstant.CACHE_FIELD_MAPPING_MAP);
-			cacheService.clearCache(CommonConstant.CACHE_PROJECT_TOOL_CONFIG);
-			cacheService.clearCache(CommonConstant.CACHE_PROJECT_TOOL_CONFIG_MAP);
-			cacheService.clearCache(CommonConstant.CACHE_BOARD_META_DATA_MAP);
-		}
-	}
-
-	/**
-	 * method to add required fields for filter operation
-	 *
-	 * @param basicConfig
-	 * @param mapper
-	 */
-	private ProjectBasicConfigDTO basicConfigDtoCreation(final ProjectBasicConfig basicConfig, ModelMapper mapper) {
-		return mapper.map(basicConfig, ProjectBasicConfigDTO.class);
 	}
 
 	@Override
@@ -427,62 +470,77 @@ public class ProjectBasicConfigServiceImpl implements ProjectBasicConfigService 
 		ProjectBasicConfig projectBasicConfig = null;
 		if (!StringUtils.isBlank(basicProjectConfigId)) {
 			if (userAuthorizedProjectsService.ifSuperAdminUser()) {
-				config = basicConfigRepository.findById(new ObjectId(basicProjectConfigId));
+				config = Optional.of(getProjectBasicConfig(basicProjectConfigId));
 			} else {
 				Set<String> basicProjectConfigIds = tokenAuthenticationService.getUserProjects();
-				if (Optional.ofNullable(basicProjectConfigIds).isPresent()
-						&& basicProjectConfigIds.contains(basicProjectConfigId)) {
-					config = basicConfigRepository.findById(new ObjectId(basicProjectConfigId));
+				if (Optional.ofNullable(basicProjectConfigIds).isPresent() &&
+						basicProjectConfigIds.contains(basicProjectConfigId)) {
+					config = Optional.of(getProjectBasicConfig(basicProjectConfigId));
 				}
 			}
 		}
 		log.info("For projectId: {} : Returning getProjectBasicConfig response: {}", basicProjectConfigId, config);
 		if (config.isPresent()) {
 			projectBasicConfig = config.get();
-			projectBasicConfigSortedBasedOnHierarchyLevel(projectBasicConfig);
 		}
 		return projectBasicConfig;
 	}
 
 	@Override
-	public void projectBasicConfigSortedBasedOnHierarchyLevel(ProjectBasicConfig projectBasicConfig) {
-		List<HierarchyValue> sortedHierarchy = CollectionUtils.emptyIfNull(projectBasicConfig.getHierarchy()).stream()
-				.sorted(Comparator
-						.comparing((HierarchyValue hierarchyValue) -> hierarchyValue.getHierarchyLevel().getLevel()))
-				.collect(Collectors.toList());
-		projectBasicConfig.setHierarchy(sortedHierarchy);
-	}
-
-	@Override
-	public List<ProjectBasicConfig> getAllProjectsBasicConfigs() {
+	public List<ProjectBasicConfig> getFilteredProjectsBasicConfigs(boolean includeAll) {
 		List<ProjectBasicConfig> list = new ArrayList<>();
-		List<ProjectBasicConfig> configListSortBasedOnLevels = new ArrayList<>();
 		if (userAuthorizedProjectsService.ifSuperAdminUser()) {
-			list.addAll(basicConfigRepository.findAll());
+			list.addAll(getAllProjectBasicConfigs(includeAll));
 		} else {
 			Set<String> basicProjectConfigIds = tokenAuthenticationService.getUserProjects();
 			if (Optional.ofNullable(basicProjectConfigIds).isPresent()) {
-				Set<ObjectId> configIds = new HashSet<>();
-				for (String id : basicProjectConfigIds) {
-					configIds.add(new ObjectId(id));
-				}
-				list.addAll(basicConfigRepository.findByIdIn(configIds));
 
+				Map<String, ProjectBasicConfig> basicConfigMap = null;
+
+				if (includeAll) {
+					basicConfigMap = (Map<String, ProjectBasicConfig>) cacheService.cacheAllProjectConfigMapData();
+				} else {
+					basicConfigMap = (Map<String, ProjectBasicConfig>) cacheService.cacheProjectConfigMapData();
+				}
+
+				List<ProjectBasicConfig> projectList = Optional.ofNullable(basicConfigMap).filter(MapUtils::isNotEmpty)
+						.map(map -> map.entrySet().stream().filter(entry -> basicProjectConfigIds.contains(entry.getKey()))
+								.map(Map.Entry::getValue) // Extract the value (ProjectBasicConfig)
+								.collect(Collectors.toList())) // Collect to a list
+						.orElseGet(ArrayList::new);
+				list.addAll(projectList);
 			}
 		}
-		if (CollectionUtils.isNotEmpty(list)) {
-			list.stream().forEach(projectBasicConfig -> {
-				projectBasicConfigSortedBasedOnHierarchyLevel(projectBasicConfig);
-				configListSortBasedOnLevels.add(projectBasicConfig);
-			});
-		}
+		list.sort(Comparator.comparing(ProjectBasicConfig::getCreatedAt));
 		log.info("Returning getProjectBasicConfig response: {}", list);
 		return list;
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
-	public List<ProjectBasicConfig> getAllProjectsBasicConfigsWithoutPermission() {
-		return basicConfigRepository.findAll();
+	public List<ProjectBasicConfig> getAllProjectBasicConfigs(boolean includeAll) {
+
+		Map<String, ProjectBasicConfig> basicConfigMap = null;
+
+		if (includeAll) {
+			basicConfigMap = (Map<String, ProjectBasicConfig>) cacheService.cacheAllProjectConfigMapData();
+		} else {
+			basicConfigMap = (Map<String, ProjectBasicConfig>) cacheService.cacheProjectConfigMapData();
+		}
+
+		return Optional.ofNullable(basicConfigMap).filter(MapUtils::isNotEmpty).map(map -> new ArrayList<>(map.values()))
+				.orElseGet(ArrayList::new);
+	}
+
+	@SuppressWarnings("unchecked")
+	@Override
+	public ProjectBasicConfig getProjectBasicConfig(String projectBasicConfigId) {
+
+		Map<String, ProjectBasicConfig> basicConfigMap = (Map<String, ProjectBasicConfig>) cacheService
+				.cacheProjectConfigMapData();
+
+		return Optional.ofNullable(basicConfigMap).filter(MapUtils::isNotEmpty).map(map -> map.get(projectBasicConfigId))
+				.orElse(null);
 	}
 
 	@Override
@@ -504,8 +562,8 @@ public class ProjectBasicConfigServiceImpl implements ProjectBasicConfigService 
 			deleteAssigneeDetails(projectBasicConfig);
 			deleteHappinessKpiDetails(projectBasicConfig);
 			addToTraceLog(projectBasicConfig);
+			deleteProjectBoardConfig(projectBasicConfig);
 			cleanAllCache();
-
 		}
 
 		return projectBasicConfig;
@@ -528,7 +586,6 @@ public class ProjectBasicConfigServiceImpl implements ProjectBasicConfigService 
 		if (isRepoTool.equals(Boolean.TRUE)) {
 			repoToolsConfigService.deleteRepoToolProject(projectBasicConfig, false);
 		}
-
 	}
 
 	private void rejectAccessRequestsWithProject(ProjectBasicConfig projectBasicConfig) {
@@ -540,7 +597,6 @@ public class ProjectBasicConfigServiceImpl implements ProjectBasicConfigService 
 		accessRequests
 				.forEach(accessRequest -> projectAccessManager.rejectAccessRequest(accessRequest.getId().toHexString(),
 						"Rejected! due to project (" + projectBasicConfig.getProjectName() + ") was deleted", null));
-
 	}
 
 	private void deleteFieldMappingAndBoardMetadata(ProjectBasicConfig projectBasicConfig) {
@@ -555,24 +611,21 @@ public class ProjectBasicConfigServiceImpl implements ProjectBasicConfigService 
 	}
 
 	private void deleteFilterData(ProjectBasicConfig projectBasicConfig) {
-		filterHelperService.deleteAccountHierarchiesOfProject(projectBasicConfig.getId(),
-				projectBasicConfig.getIsKanban());
+		filterHelperService.deleteAccountHierarchiesOfProject(projectBasicConfig);
 	}
 
 	private void deleteToolsAndCleanData(ProjectBasicConfig projectBasicConfig) {
 		List<String> scmToolList = Arrays.asList(ProcessorConstants.BITBUCKET, ProcessorConstants.GITLAB,
 				ProcessorConstants.GITHUB, ProcessorConstants.AZUREREPO);
 		List<ProjectToolConfig> tools = toolRepository.findByBasicProjectConfigId(projectBasicConfig.getId());
-		Boolean isRepoTool = tools.stream().anyMatch(toolConfig -> scmToolList.contains(toolConfig.getToolName())
-				&& projectBasicConfig.isDeveloperKpiEnabled());
+		Boolean isRepoTool = tools.stream().anyMatch(
+				toolConfig -> scmToolList.contains(toolConfig.getToolName()) && projectBasicConfig.isDeveloperKpiEnabled());
 		deleteRepoToolProject(projectBasicConfig, isRepoTool);
 		CollectionUtils.emptyIfNull(tools).forEach(tool -> {
-
 			ToolDataCleanUpService dataCleanUpService = dataCleanUpServiceFactory.getService(tool.getToolName());
 			dataCleanUpService.clean(tool.getId().toHexString());
 			deleteTool(tool);
 			log.info("{} tool with id {} deleted" + tool.getToolName(), tool.getId().toHexString());
-
 		});
 	}
 
@@ -595,10 +648,14 @@ public class ProjectBasicConfigServiceImpl implements ProjectBasicConfigService 
 		log.info("traceLog saved for project {}", projectBasicConfig.getProjectName());
 	}
 
+	private void deleteProjectBoardConfig(ProjectBasicConfig projectBasicConfig) {
+		log.info("Deleting project board config for project: {}", projectBasicConfig.getProjectName());
+		userBoardConfigService.deleteProjectBoardConfig(projectBasicConfig.getId().toString());
+	}
+
 	private void cleanAllCache() {
 		cacheService.clearAllCache();
 		log.info("cache cleared");
-
 	}
 
 	private void deleteSprintDetailsData(ProjectBasicConfig projectBasicConfig) {
@@ -607,7 +664,7 @@ public class ProjectBasicConfigServiceImpl implements ProjectBasicConfigService 
 
 	/**
 	 * Service to fetch the list of all project basic configuration
-	 * 
+	 *
 	 * @return {@code List<ProjectBasicConfigDTO>} : empty list incase no data found
 	 */
 	@SuppressWarnings("unchecked")
@@ -628,7 +685,7 @@ public class ProjectBasicConfigServiceImpl implements ProjectBasicConfigService 
 
 	/**
 	 * Service to fetch the map of all project basic configuration
-	 * 
+	 *
 	 * @return {@code Map<String, ProjectBasicConfigDTO>} : empty map incase no data
 	 *         found
 	 */
@@ -641,9 +698,7 @@ public class ProjectBasicConfigServiceImpl implements ProjectBasicConfigService 
 		return map;
 	}
 
-	/**
-	 * Get all basic config, create tree and return root node
-	 */
+	/** Get all basic config, create tree and return root node */
 	public ProjectBasicConfigNode getBasicConfigTree() {
 		Set<ProjectBasicConfigNode> basicConfigs = getBasicConfigNodes();
 		ProjectBasicConfigNode projectBasicConfigNode = new ProjectBasicConfigNode();
@@ -652,11 +707,10 @@ public class ProjectBasicConfigServiceImpl implements ProjectBasicConfigService 
 		}
 
 		return projectBasicConfigNode;
-
 	}
 
 	private Set<ProjectBasicConfigNode> getBasicConfigNodes() {
-		List<ProjectBasicConfig> projectBasicConfigs = basicConfigRepository.findAll();
+		List<ProjectBasicConfig> projectBasicConfigs = getAllProjectBasicConfigs(Boolean.FALSE);
 		Set<ProjectBasicConfigNode> projectBasicConfigNodes = new LinkedHashSet<>();
 		if (CollectionUtils.isNotEmpty(projectBasicConfigs)) {
 
@@ -672,15 +726,13 @@ public class ProjectBasicConfigServiceImpl implements ProjectBasicConfigService 
 					for (HierarchyValue hierarchyValue : projectBasicConfig.getHierarchy()) {
 						HierarchyLevel hierarchyLevel = hierarchyValue.getHierarchyLevel();
 						ProjectBasicConfigNode projectBasicHierarchyNode = createProjectBasicNode(
-								hierarchyValue.getValue(),
-								new ArrayList<>(Arrays.asList(projectBasicConfigLevelWiseNode)),
+								hierarchyValue.getOrgHierarchyNodeId(), new ArrayList<>(Arrays.asList(projectBasicConfigLevelWiseNode)),
 								hierarchyLevel.getHierarchyLevelId());
 						projectBasicConfigNodes.add(projectBasicHierarchyNode);
 						projectBasicConfigLevelWiseNode = projectBasicHierarchyNode;
 					}
 				}
-				ProjectBasicConfigNode projectBasicProjNode = createProjectBasicNode(
-						projectBasicConfig.getId().toString(),
+				ProjectBasicConfigNode projectBasicProjNode = createProjectBasicNode(projectBasicConfig.getProjectNodeId(),
 						new ArrayList<>(Arrays.asList(projectBasicConfigLevelWiseNode)), Filters.PROJECT.name());
 				projectBasicConfigNodes.add(projectBasicProjNode);
 			}
@@ -739,9 +791,7 @@ public class ProjectBasicConfigServiceImpl implements ProjectBasicConfigService 
 		return root;
 	}
 
-	/**
-	 * Method to find out the node from a project basic config tree
-	 */
+	/** Method to find out the node from a project basic config tree */
 	public ProjectBasicConfigNode findNode(ProjectBasicConfigNode node, String searchValue, String groupName) {
 		if (node.getValue().equalsIgnoreCase(searchValue) && node.getGroupName().equalsIgnoreCase(groupName)) {
 			return node;
@@ -755,9 +805,7 @@ public class ProjectBasicConfigServiceImpl implements ProjectBasicConfigService 
 		return result;
 	}
 
-	/**
-	 * Method to find out all the child nodes of a tree
-	 */
+	/** Method to find out all the child nodes of a tree */
 	public void findChildren(ProjectBasicConfigNode node, List<ProjectBasicConfigNode> children) {
 		for (ProjectBasicConfigNode child : node.getChildren()) {
 			children.add(child);
@@ -765,11 +813,9 @@ public class ProjectBasicConfigServiceImpl implements ProjectBasicConfigService 
 		}
 	}
 
-	/**
-	 * Method to find out all the parent nodes of a tree
-	 */
+	/** Method to find out all the parent nodes of a tree */
 	public void findParents(List<ProjectBasicConfigNode> nodes, List<ProjectBasicConfigNode> parents) {
-		if (CollectionUtils.isNotEmpty(nodes)) {
+		if (CollectionUtils.isNotEmpty(nodes) && nodes.get(0) != null) {
 			for (ProjectBasicConfigNode node : nodes) {
 				if (node.getParent() != null) {
 					parents.addAll(node.getParent());
@@ -779,9 +825,7 @@ public class ProjectBasicConfigServiceImpl implements ProjectBasicConfigService 
 		}
 	}
 
-	/**
-	 * Method to find out all the leafnode of a tree
-	 */
+	/** Method to find out all the leafnode of a tree */
 	public void findLeaf(ProjectBasicConfigNode node, List<ProjectBasicConfigNode> leafNodes) {
 		if (node.getChildren().isEmpty()) {
 			leafNodes.add(node);
@@ -795,22 +839,23 @@ public class ProjectBasicConfigServiceImpl implements ProjectBasicConfigService 
 	public List<HierarchyResponseDTO> getHierarchyData() {
 		List<ProjectBasicConfigDTO> basicConfigDTOS = getAllProjectsBasicConfigsDTOWithoutPermission();
 		List<ProjectBasicConfigDTO> scrumProjectBasicConfigList = basicConfigDTOS.stream()
-				.filter(projectBasicConfigDTO -> !projectBasicConfigDTO.getIsKanban()).collect(Collectors.toList());
+				.filter(projectBasicConfigDTO -> !projectBasicConfigDTO.getIsKanban()).toList();
 		Map<ObjectId, List<SprintDetails>> groupedByProject = getTop5SprintDetailsGroupedByProject(
 				scrumProjectBasicConfigList.stream().map(ProjectBasicConfigDTO::getId).toList());
 		List<HierarchyResponseDTO> hierarchyResponseDTOS = new ArrayList<>();
 		for (ProjectBasicConfigDTO projectBasicConfig : scrumProjectBasicConfigList) {
 			HierarchyResponseDTO dto = new HierarchyResponseDTO();
-			dto.setProjectId(projectBasicConfig.getId().toString());
+			dto.setProjectNodeId(projectBasicConfig.getProjectNodeId());
+			dto.setProjectBasicId(projectBasicConfig.getId().toString());
 			dto.setProjectName(projectBasicConfig.getProjectName());
 			projectBasicConfig.getHierarchy().forEach(hirarchy -> {
 				int level = hirarchy.getHierarchyLevel().getLevel();
 				String value = hirarchy.getValue();
 				switch (level) {
-				case 1 -> dto.setHierarchyLevelOne(value);
-				case 2 -> dto.setHierarchyLevelTwo(value);
-				case 3 -> dto.setHierarchyLevelThree(value);
-				default -> dto.setHierarchyLevelFour(value);
+					case 1 -> dto.setHierarchyLevelOne(value);
+					case 2 -> dto.setHierarchyLevelTwo(value);
+					case 3 -> dto.setHierarchyLevelThree(value);
+					default -> dto.setHierarchyLevelFour(value);
 				}
 			});
 			dto.setSprintDetailsList(groupedByProject.getOrDefault(projectBasicConfig.getId(), new ArrayList<>()));
@@ -820,8 +865,7 @@ public class ProjectBasicConfigServiceImpl implements ProjectBasicConfigService 
 				.collect(Collectors.toList());
 	}
 
-	public Map<ObjectId, List<SprintDetails>> getTop5SprintDetailsGroupedByProject(
-			List<ObjectId> basicProjectConfigIds) {
+	public Map<ObjectId, List<SprintDetails>> getTop5SprintDetailsGroupedByProject(List<ObjectId> basicProjectConfigIds) {
 		List<String> sprintStatusList = new ArrayList<>();
 		sprintStatusList.add(SprintDetails.SPRINT_STATE_CLOSED);
 		sprintStatusList.add(SprintDetails.SPRINT_STATE_CLOSED.toLowerCase());
@@ -832,16 +876,77 @@ public class ProjectBasicConfigServiceImpl implements ProjectBasicConfigService 
 
 		sprintDetailsList.sort((s1, s2) -> s2.getStartDate().compareTo(s1.getStartDate()));
 		// Group by basicProjectConfigId and limit to top 5
-		return sprintDetailsList.stream()
-				.collect(Collectors.groupingBy(SprintDetails::getBasicProjectConfigId, Collectors.collectingAndThen(
-						Collectors.toList(), list -> list.stream().limit(5).collect(Collectors.toList()))));
+		return sprintDetailsList.stream().collect(Collectors.groupingBy(SprintDetails::getBasicProjectConfigId, Collectors
+				.collectingAndThen(Collectors.toList(), list -> list.stream().limit(5).collect(Collectors.toList()))));
+	}
+
+	public List<HierarchyValue> getHierarchy(List<HierarchyLevel> hierarchyLevels, String nodeId) {
+
+		List<HierarchyValue> hierarchy = new ArrayList<>();
+
+		// Retrieve the Org Hierarchy node
+		OrganizationHierarchy organizationHierarchy = organizationHierarchyService.findByNodeId(nodeId);
+
+		// Move one level above if the current node exists
+		if (organizationHierarchy != null) {
+			String parentId = organizationHierarchy.getParentId();
+			organizationHierarchy = parentId != null ? organizationHierarchyService.findByNodeId(parentId) : null;
+		}
+
+		while (organizationHierarchy != null) {
+
+			// Create and add the hierarchy value
+			hierarchy.add(createHierarchyValue(hierarchyLevels, organizationHierarchy));
+
+			if (organizationHierarchy.getParentId() == null) {
+				break;
+			}
+			organizationHierarchy = organizationHierarchyService.findByNodeId(organizationHierarchy.getParentId());
+		}
+
+		hierarchy.sort(Comparator.comparing(hierarchyValue -> hierarchyValue.getHierarchyLevel().getLevel()));
+		return hierarchy;
+	}
+
+	private HierarchyValue createHierarchyValue(List<HierarchyLevel> hierarchyLevels,
+			OrganizationHierarchy organizationHierarchy) {
+
+		HierarchyValue hierarchyValue = new HierarchyValue();
+
+		HierarchyLevel hierarchyLevel = getHierarchyLevel(hierarchyLevels, organizationHierarchy.getHierarchyLevelId());
+
+		hierarchyValue.setHierarchyLevel(hierarchyLevel);
+		hierarchyValue.setOrgHierarchyNodeId(organizationHierarchy.getNodeId());
+		hierarchyValue.setValue(organizationHierarchy.getNodeDisplayName());
+
+		return hierarchyValue;
+	}
+
+	private HierarchyLevel getHierarchyLevel(List<HierarchyLevel> hierarchyLevels, String hierarchyLevelId) {
+		return hierarchyLevels.stream()
+				.filter(hierarchy -> hierarchy.getHierarchyLevelId().equalsIgnoreCase(hierarchyLevelId)).findFirst()
+				// Setting this explicitly to maintain backward compatibility
+				.map(hierarchyLevel -> {
+					hierarchyLevel.setId(null);
+					return hierarchyLevel;
+				}).orElse(null);
+	}
+
+	@Override
+	public List<ProjectBasicConfig> getAllProjectsBasicConfigs(boolean isKanban) {
+		Map<String, ProjectBasicConfig> basicConfigMap = (Map<String, ProjectBasicConfig>) cacheService
+				.cacheProjectConfigMapData();
+
+		List<ProjectBasicConfig> basicConfigList = basicConfigMap.values().stream().collect(Collectors.toList());
+		return basicConfigList.stream().filter(projectBasicConfig -> projectBasicConfig.isKanban() == isKanban)
+				.collect(Collectors.toList());
 	}
 
 	/**
 	 * Filters out HierarchyResponseDTOs where none of the tools are connected.
 	 *
 	 * @param hierarchyResponseDTOS
-	 *            the list of HierarchyResponseDTOs to filter
+	 *          the list of HierarchyResponseDTOs to filter
 	 * @return a list of HierarchyResponseDTOs with at least one connected tool
 	 */
 	public List<HierarchyResponseDTO> filterHierarchyDTOsWithConnectedTools(
@@ -849,12 +954,11 @@ public class ProjectBasicConfigServiceImpl implements ProjectBasicConfigService 
 		Map<ObjectId, Map<String, List<ProjectToolConfig>>> projectToolConfigMapData = getProjectToolConfigMapData();
 		return hierarchyResponseDTOS.stream()
 				.filter(hierarchyResponsedto -> MapUtils
-						.isNotEmpty(projectToolConfigMapData.get(new ObjectId(hierarchyResponsedto.getProjectId()))))
+						.isNotEmpty(projectToolConfigMapData.get(new ObjectId(hierarchyResponsedto.getProjectBasicId()))))
 				.collect(Collectors.toList());
 	}
 
 	private Map<ObjectId, Map<String, List<ProjectToolConfig>>> getProjectToolConfigMapData() {
 		return (Map<ObjectId, Map<String, List<ProjectToolConfig>>>) cacheService.cacheProjectToolConfigMapData();
 	}
-
 }
