@@ -38,7 +38,6 @@ import org.apache.commons.collections4.ListUtils;
 import org.apache.commons.collections4.MapUtils;
 import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.StringUtils;
-import org.apache.commons.lang3.tuple.Pair;
 import org.bson.types.ObjectId;
 import org.codehaus.jettison.json.JSONException;
 import org.joda.time.DateTime;
@@ -62,11 +61,12 @@ import com.publicissapient.kpidashboard.common.constant.CommonConstant;
 import com.publicissapient.kpidashboard.common.constant.NormalizedJira;
 import com.publicissapient.kpidashboard.common.constant.ProcessorConstants;
 import com.publicissapient.kpidashboard.common.model.ProcessorExecutionTraceLog;
-import com.publicissapient.kpidashboard.common.model.application.AccountHierarchy;
 import com.publicissapient.kpidashboard.common.model.application.AdditionalFilter;
 import com.publicissapient.kpidashboard.common.model.application.FieldMapping;
 import com.publicissapient.kpidashboard.common.model.application.HierarchyLevel;
+import com.publicissapient.kpidashboard.common.model.application.OrganizationHierarchy;
 import com.publicissapient.kpidashboard.common.model.application.ProjectBasicConfig;
+import com.publicissapient.kpidashboard.common.model.application.ProjectHierarchy;
 import com.publicissapient.kpidashboard.common.model.azureboards.Attribute;
 import com.publicissapient.kpidashboard.common.model.azureboards.AzureBoardsWIModel;
 import com.publicissapient.kpidashboard.common.model.azureboards.Fields;
@@ -82,13 +82,13 @@ import com.publicissapient.kpidashboard.common.model.jira.JiraIssue;
 import com.publicissapient.kpidashboard.common.model.jira.JiraIssueCustomHistory;
 import com.publicissapient.kpidashboard.common.model.jira.SprintDetails;
 import com.publicissapient.kpidashboard.common.processortool.service.ProcessorToolConnectionService;
-import com.publicissapient.kpidashboard.common.repository.application.AccountHierarchyRepository;
 import com.publicissapient.kpidashboard.common.repository.jira.AssigneeDetailsRepository;
 import com.publicissapient.kpidashboard.common.repository.jira.JiraIssueCustomHistoryRepository;
 import com.publicissapient.kpidashboard.common.repository.jira.JiraIssueRepository;
 import com.publicissapient.kpidashboard.common.service.AesEncryptionService;
 import com.publicissapient.kpidashboard.common.service.HierarchyLevelService;
 import com.publicissapient.kpidashboard.common.service.ProcessorExecutionTraceLogService;
+import com.publicissapient.kpidashboard.common.service.ProjectHierarchyService;
 import com.publicissapient.kpidashboard.common.util.DateUtil;
 
 import lombok.extern.slf4j.Slf4j;
@@ -109,8 +109,6 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 	@Autowired
 	private AzureProcessorRepository azureProcessorRepository;
 	@Autowired
-	private AccountHierarchyRepository accountHierarchyRepository;
-	@Autowired
 	private AzureProcessorConfig azureProcessorConfig;
 	@Autowired
 	private AesEncryptionService aesEncryptionService;
@@ -130,6 +128,8 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 	private ProcessorExecutionTraceLogService processorExecutionTraceLogService;
 	@Autowired
 	private ProcessorToolConnectionService processorToolConnectionService;
+	@Autowired
+	private ProjectHierarchyService projectHierarchyService;
 
 	@Override
 	public int processesAzureIssues(ProjectConfFieldMapping projectConfig, String projectKey, // NOSONAR
@@ -153,8 +153,8 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 
 			Map<String, LocalDateTime> startTimesByIssueType = new HashMap<>();
 
-			maxChangeDatesByIssueType.forEach(
-					(k, v) -> startTimesByIssueType.put(k, v.minusMinutes(azureProcessorConfig.getMinsToReduce())));
+			maxChangeDatesByIssueType
+					.forEach((k, v) -> startTimesByIssueType.put(k, v.minusMinutes(azureProcessorConfig.getMinsToReduce())));
 
 			int pageSize = azureAdapter.getPageSize();
 
@@ -214,11 +214,10 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 					}
 				}
 
-				lastSavedJiraIssueChangedDateByType = findLastSavedJiraIssueByType(
-						projectConfig.getBasicProjectConfigId(), projectConfig.getFieldMapping());
+				lastSavedJiraIssueChangedDateByType = findLastSavedJiraIssueByType(projectConfig.getBasicProjectConfigId(),
+						projectConfig.getFieldMapping());
 				// sprint report prepare and save sprint details
 				sprintClient.prepareSprintReport(projectConfig, sprintDetailsSet, azureAdapter, azureServer);
-
 			}
 
 		} catch (JSONException | NullPointerException e) {
@@ -233,15 +232,14 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 				processorExecutionTraceLog.setLastSuccessfulRun(null);
 				log.error("Error in Fetching Issues");
 			} else {
-				processorExecutionTraceLog.setLastSuccessfulRun(
-						DateUtil.dateTimeFormatter(LocalDateTime.now(), DateUtil.DATE_TIME_FORMAT));
+				processorExecutionTraceLog
+						.setLastSuccessfulRun(DateUtil.dateTimeFormatter(LocalDateTime.now(), DateUtil.DATE_TIME_FORMAT));
 			}
 			saveExecutionTraceLog(processorExecutionTraceLog, lastSavedJiraIssueChangedDateByType, isAttemptSuccess,
 					projectConfig.getProjectBasicConfig());
 		}
 
 		return count;
-
 	}
 
 	private void debugIssuesBeingProcessed(int pageSize, List<Integer> workItemIds, int i) {
@@ -255,9 +253,9 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 	 * Purges list of issues provided in input
 	 *
 	 * @param purgeIssuesList
-	 *            List of issues to be purged
+	 *          List of issues to be purged
 	 * @param projectConfig
-	 *            Project Configuration Mapping
+	 *          Project Configuration Mapping
 	 */
 	@Override
 	public void purgeAzureIssues(List<Value> purgeIssuesList, ProjectConfFieldMapping projectConfig) {
@@ -267,8 +265,7 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 		purgeIssuesList.forEach(issue -> {
 			String issueId = AzureProcessorUtil.deodeUTF8String(issue.getId());
 			String projectKeyIssueId = getModifiedIssueId(projectConfig, issueId);
-			JiraIssue jiraIssue = findOneAzureIssue(projectKeyIssueId,
-					projectConfig.getBasicProjectConfigId().toString());
+			JiraIssue jiraIssue = findOneAzureIssue(projectKeyIssueId, projectConfig.getBasicProjectConfigId().toString());
 			JiraIssueCustomHistory jiraIssueHistory = findOneAzureIssueHistory(projectKeyIssueId,
 					projectConfig.getBasicProjectConfigId().toString());
 			if (jiraIssue != null) {
@@ -277,7 +274,6 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 			if (jiraIssueHistory != null) {
 				jiraIssuesHistoryToDelete.add(jiraIssueHistory);
 			}
-
 		});
 		jiraIssueRepository.deleteAll(jiraIssuesToDelete);
 		jiraIssueCustomHistoryRepository.deleteAll(jiraIssuesHistoryToDelete);
@@ -287,11 +283,11 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 	 * Saves Azure issues details
 	 *
 	 * @param currentPagedAzureRs
-	 *            List of Azure issue in current page call
+	 *          List of Azure issue in current page call
 	 * @param projectConfig
-	 *            Project Configuration Mapping
+	 *          Project Configuration Mapping
 	 * @throws JSONException
-	 *             Error If JSON is invalid
+	 *           Error If JSON is invalid
 	 */
 	@Override
 	public int saveAzureIssueDetails(List<Value> currentPagedAzureRs, ProjectConfFieldMapping projectConfig,
@@ -303,8 +299,7 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 			log.error("Azure Boards Processor | No list of current paged Azure Boards issues found");
 			return 0;
 		}
-		List<HierarchyLevel> hierarchyLevelList = hierarchyLevelService
-				.getFullHierarchyLevels(projectConfig.isKanban());
+		List<HierarchyLevel> hierarchyLevelList = hierarchyLevelService.getFullHierarchyLevels(projectConfig.isKanban());
 		Set<Assignee> assigneeSetToSave = new HashSet<>();
 		List<JiraIssue> azureIssuesToSave = new ArrayList<>();
 		List<JiraIssueCustomHistory> azureIssueHistoryToSave = new ArrayList<>();
@@ -328,8 +323,7 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 			// Modifying issueId to get unique value to each project
 			String projectKeyIssueId = getModifiedIssueId(projectConfig, issueId);
 
-			JiraIssue azureIssue = findOneAzureIssue(projectKeyIssueId,
-					projectConfig.getBasicProjectConfigId().toString());
+			JiraIssue azureIssue = findOneAzureIssue(projectKeyIssueId, projectConfig.getBasicProjectConfigId().toString());
 			if (azureIssue == null) {
 				azureIssue = new JiraIssue();
 			}
@@ -351,8 +345,7 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 			// Add UAT/Third Party identification field to JiraIssue
 			setThirdPartyDefectIdentificationField(fieldMapping, issue, azureIssue, fieldsMap);
 
-			if (issueTypeNames
-					.contains(AzureProcessorUtil.deodeUTF8String(issueType).toLowerCase(Locale.getDefault()))) {
+			if (issueTypeNames.contains(AzureProcessorUtil.deodeUTF8String(issueType).toLowerCase(Locale.getDefault()))) {
 
 				log.debug(String.format("[%-12s] %s", AzureProcessorUtil.deodeUTF8String(issue.getId()),
 						AzureProcessorUtil.deodeUTF8String(fields.getSystemTitle())));
@@ -366,14 +359,14 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 				azureIssue.setOriginalType(AzureProcessorUtil.deodeUTF8String(issueType));
 
 				// set defecttype to BUG
-				if (CollectionUtils.isNotEmpty(fieldMapping.getJiradefecttype())
-						&& fieldMapping.getJiradefecttype().stream().anyMatch(issueType::equalsIgnoreCase)) {
+				if (CollectionUtils.isNotEmpty(fieldMapping.getJiradefecttype()) &&
+						fieldMapping.getJiradefecttype().stream().anyMatch(issueType::equalsIgnoreCase)) {
 					azureIssue.setTypeName(NormalizedJira.DEFECT_TYPE.getValue());
 				}
 
 				// Set EPIC issue data for issue type epic
-				if (CollectionUtils.isNotEmpty(fieldMapping.getJiraIssueEpicType()) && fieldMapping
-						.getJiraIssueEpicType().contains(AzureProcessorUtil.deodeUTF8String(issueType))) {
+				if (CollectionUtils.isNotEmpty(fieldMapping.getJiraIssueEpicType()) &&
+						fieldMapping.getJiraIssueEpicType().contains(AzureProcessorUtil.deodeUTF8String(issueType))) {
 					setEpicIssueData(fieldMapping, azureIssue, fieldsMap);
 				}
 
@@ -408,8 +401,7 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 				String sprintPathFromIssue = issue.getFields().getSystemIterationPath();
 				String finalsprintPathFromIssue = getModifiedSprintsPath(sprintPathFromIssue);
 				if (null != sprintPathsMap && sprintPathsMap.containsKey(finalsprintPathFromIssue)) {
-					processSprintData(azureIssue, sprintPathsMap.get(finalsprintPathFromIssue), projectConfig,
-							sprintDetailsSet);
+					processSprintData(azureIssue, sprintPathsMap.get(finalsprintPathFromIssue), projectConfig, sprintDetailsSet);
 				}
 
 				setJiraAssigneeDetails(azureIssue, fields, assigneeSetToSave, projectConfig);
@@ -420,11 +412,10 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 
 				setDueDates(azureIssue, fields, fieldsMap, fieldMapping);
 
-				if (StringUtils.isNotBlank(azureIssue.getProjectID())) {
+				if (StringUtils.isNotBlank(azureIssue.getBasicProjectConfigId())) {
 					azureIssuesToSave.add(azureIssue);
 					azureIssueHistoryToSave.add(azureIssueHistory);
 				}
-
 			}
 		}
 
@@ -447,9 +438,9 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 	 * Finds one JiraIssue by issueId
 	 *
 	 * @param issueId
-	 *            azure issueId
+	 *          azure issueId
 	 * @param basicProjectConfigId
-	 *            basicProjectConfigId
+	 *          basicProjectConfigId
 	 * @return JiraIssue corresponding to provided IssueId in DB
 	 */
 	private JiraIssue findOneAzureIssue(String issueId, String basicProjectConfigId) {
@@ -466,14 +457,14 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 	 * Gets one JiraIssueCustomHistory entry by issueId
 	 *
 	 * @param issueId
-	 *            Azzure Issue ID
+	 *          Azzure Issue ID
 	 * @param basicProjectConfigId
-	 *            basicProjectConfigId
+	 *          basicProjectConfigId
 	 * @return JiraIssueCustomHistory corresponding to given IssueId from DB
 	 */
 	private JiraIssueCustomHistory findOneAzureIssueHistory(String issueId, String basicProjectConfigId) {
-		JiraIssueCustomHistory jiraIssues = jiraIssueCustomHistoryRepository
-				.findByStoryIDAndBasicProjectConfigId(issueId, basicProjectConfigId);
+		JiraIssueCustomHistory jiraIssues = jiraIssueCustomHistoryRepository.findByStoryIDAndBasicProjectConfigId(issueId,
+				basicProjectConfigId);
 
 		if (ObjectUtils.isNotEmpty(jiraIssues)) {
 			return jiraIssues;
@@ -487,29 +478,26 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 	 * field or "labels"
 	 *
 	 * @param fieldMapping
-	 *            Porject Field mapping
+	 *          Porject Field mapping
 	 * @param issue
-	 *            Azure issue
+	 *          Azure issue
 	 * @param azureIssue
-	 *            jiraIssue
+	 *          jiraIssue
 	 */
-
 	private void setThirdPartyDefectIdentificationField(FieldMapping fieldMapping, Value issue, JiraIssue azureIssue,
 			Map<String, Object> fieldsMap) {
 		Fields fields = issue.getFields();
 
-		if (CollectionUtils.isNotEmpty(fieldMapping.getJiradefecttype()) && fieldMapping.getJiradefecttype().stream()
-				.anyMatch(fields.getSystemWorkItemType()::equalsIgnoreCase)) {
+		if (CollectionUtils.isNotEmpty(fieldMapping.getJiradefecttype()) &&
+				fieldMapping.getJiradefecttype().stream().anyMatch(fields.getSystemWorkItemType()::equalsIgnoreCase)) {
 
 			String jiraBugRaisedByCustomField = fieldMapping.getJiraBugRaisedByCustomField();
 
-			if (StringUtils.isNotBlank(fieldMapping.getJiraBugRaisedByIdentification())
-					&& fieldMapping.getJiraBugRaisedByIdentification().trim()
-							.equalsIgnoreCase(AzureConstants.CUSTOM_FIELD)
-					&& fieldsMap.containsKey(jiraBugRaisedByCustomField.trim())
-					&& fieldsMap.get(jiraBugRaisedByCustomField.trim()) != null
-					&& isBugRaisedByValueMatchesRaisedByCustomField(fieldMapping.getJiraBugRaisedByValue(),
-							fieldsMap.get(jiraBugRaisedByCustomField.trim()))) {
+			if (StringUtils.isNotBlank(fieldMapping.getJiraBugRaisedByIdentification()) &&
+					fieldMapping.getJiraBugRaisedByIdentification().trim().equalsIgnoreCase(AzureConstants.CUSTOM_FIELD) &&
+					fieldsMap.containsKey(jiraBugRaisedByCustomField.trim()) &&
+					fieldsMap.get(jiraBugRaisedByCustomField.trim()) != null && isBugRaisedByValueMatchesRaisedByCustomField(
+							fieldMapping.getJiraBugRaisedByValue(), fieldsMap.get(jiraBugRaisedByCustomField.trim()))) {
 				azureIssue.setDefectRaisedBy(NormalizedJira.THIRD_PARTY_DEFECT_VALUE.getValue());
 			} else {
 				azureIssue.setDefectRaisedBy("");
@@ -527,7 +515,6 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 			} else {
 				finalSprintPath = sprintPath.substring(sepPos + separator.length());
 			}
-
 		}
 		return finalSprintPath;
 	}
@@ -536,9 +523,9 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 	 * Process sprint details
 	 *
 	 * @param azureIssue
-	 *            JiraIssue
+	 *          JiraIssue
 	 * @param value
-	 *            Value containing sprint Data
+	 *          Value containing sprint Data
 	 */
 	private void processSprintData(JiraIssue azureIssue,
 			com.publicissapient.kpidashboard.common.model.azureboards.iterations.Value value,
@@ -554,8 +541,8 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 			azureIssue.setSprintEndDate("");
 			azureIssue.setSprintAssetState("");
 		} else {
-			String sprintId = value.getId() + AzureConstants.COMBINE_IDS_SYMBOL + azureIssue.getProjectName()
-					+ AzureConstants.COMBINE_IDS_SYMBOL + projectConfig.getBasicProjectConfigId();
+			String sprintId = value.getId() + CommonConstant.ADDITIONAL_FILTER_VALUE_ID_SEPARATOR +
+					projectConfig.getProjectBasicConfig().getProjectNodeId();
 			setSprintData(azureIssue, value, sprintId);
 			populateSprintDetails(value, sprintDetailsSet, sprintId);
 		}
@@ -572,11 +559,14 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 		jiraIssue.setSprintName(value.getName() == null ? StringUtils.EMPTY : value.getName());
 		jiraIssue.setSprintID(value.getId() == null ? StringUtils.EMPTY : sprintId);
 		if (value.getAttributes() != null) {
-			jiraIssue.setSprintBeginDate(value.getAttributes().getStartDate() == null ? StringUtils.EMPTY
+			jiraIssue.setSprintBeginDate(value.getAttributes().getStartDate() == null
+					? StringUtils.EMPTY
 					: AzureProcessorUtil.getFormattedDate(value.getAttributes().getStartDate()));
-			jiraIssue.setSprintEndDate(value.getAttributes().getFinishDate() == null ? StringUtils.EMPTY
+			jiraIssue.setSprintEndDate(value.getAttributes().getFinishDate() == null
+					? StringUtils.EMPTY
 					: AzureProcessorUtil.getFormattedDate(value.getAttributes().getFinishDate()));
-			String sprintState = value.getAttributes().getTimeFrame() == null ? StringUtils.EMPTY
+			String sprintState = value.getAttributes().getTimeFrame() == null
+					? StringUtils.EMPTY
 					: value.getAttributes().getTimeFrame();
 			if (StringUtils.isNotEmpty(sprintState) && sprintState.equalsIgnoreCase(SPRINT_STATE_CLOSED)) {
 				jiraIssue.setSprintAssetState(CLOSED);
@@ -588,31 +578,30 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 
 	/**
 	 * ADD Production Incident field to feature
-	 * 
+	 *
 	 * @param fieldMapping
-	 *            fieldMapping
+	 *          fieldMapping
 	 * @param issue
-	 *            issue
+	 *          issue
 	 * @param azureIssue
-	 *            azureIssue
+	 *          azureIssue
 	 * @param fieldsMap
-	 *            fieldsMap
+	 *          fieldsMap
 	 */
 	private void setProdIncidentIdentificationField(FieldMapping fieldMapping, Value issue, JiraIssue azureIssue,
 			Map<String, Object> fieldsMap) {
 		try {
 			Fields fields = issue.getFields();
 
-			if (CollectionUtils.isNotEmpty(fieldMapping.getJiradefecttype()) && fieldMapping.getJiradefecttype()
-					.stream().anyMatch(fields.getSystemWorkItemType()::equalsIgnoreCase)) {
+			if (CollectionUtils.isNotEmpty(fieldMapping.getJiradefecttype()) &&
+					fieldMapping.getJiradefecttype().stream().anyMatch(fields.getSystemWorkItemType()::equalsIgnoreCase)) {
 
 				String jiraProductionIncidentCustomField = fieldMapping.getJiraProdIncidentRaisedByCustomField();
 				azureIssue.setProductionIncident(false);
-				if (null != fieldMapping.getJiraProductionIncidentIdentification() && fieldMapping
-						.getJiraProductionIncidentIdentification().trim().equalsIgnoreCase(AzureConstants.LABELS)) {
+				if (null != fieldMapping.getJiraProductionIncidentIdentification() &&
+						fieldMapping.getJiraProductionIncidentIdentification().trim().equalsIgnoreCase(AzureConstants.LABELS)) {
 					getJiraProdIncidentForLabels(fieldMapping, azureIssue, fields);
-				} else if (isProdIncidentConditionForCustomField(fieldMapping, fieldsMap,
-						jiraProductionIncidentCustomField)) {
+				} else if (isProdIncidentConditionForCustomField(fieldMapping, fieldsMap, jiraProductionIncidentCustomField)) {
 					azureIssue.setProductionIncident(true);
 				}
 			}
@@ -620,18 +609,15 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 		} catch (Exception e) {
 			log.error("Error while parsing production incident field", e);
 		}
-
 	}
 
 	private boolean isProdIncidentConditionForCustomField(FieldMapping fieldMapping, Map<String, Object> fieldsMap,
 			String jiraProductionIncidentCustomField) {
-		return null != fieldMapping.getJiraProductionIncidentIdentification()
-				&& fieldMapping.getJiraProductionIncidentIdentification().trim()
-						.equalsIgnoreCase(AzureConstants.CUSTOM_FIELD)
-				&& fieldsMap.containsKey(jiraProductionIncidentCustomField.trim())
-				&& fieldsMap.get(jiraProductionIncidentCustomField.trim()) != null
-				&& isBugRaisedByValueMatchesRaisedByCustomField(fieldMapping.getJiraProdIncidentRaisedByValue(),
-						fieldsMap.get(jiraProductionIncidentCustomField.trim()));
+		return null != fieldMapping.getJiraProductionIncidentIdentification() &&
+				fieldMapping.getJiraProductionIncidentIdentification().trim().equalsIgnoreCase(AzureConstants.CUSTOM_FIELD) &&
+				fieldsMap.containsKey(jiraProductionIncidentCustomField.trim()) &&
+				fieldsMap.get(jiraProductionIncidentCustomField.trim()) != null && isBugRaisedByValueMatchesRaisedByCustomField(
+						fieldMapping.getJiraProdIncidentRaisedByValue(), fieldsMap.get(jiraProductionIncidentCustomField.trim()));
 	}
 
 	private void getJiraProdIncidentForLabels(FieldMapping fieldMapping, JiraIssue azureIssue, Fields fields) {
@@ -648,12 +634,11 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 	 * Checks if the bug is raised by third party
 	 *
 	 * @param bugRaisedValue
-	 *            Value of raised defect
+	 *          Value of raised defect
 	 * @param issueFieldValue
-	 *            Issue Field Value Object
+	 *          Issue Field Value Object
 	 * @return boolean
 	 */
-
 	public boolean isBugRaisedByValueMatchesRaisedByLabels(List<String> bugRaisedValue, Set<String> issueFieldValue) {
 		List<String> lowerCaseBugRaisedValue = bugRaisedValue.stream().map(String::toLowerCase)
 				.collect(Collectors.toList());
@@ -673,12 +658,11 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 	 * Checks if the bug is raised by third party
 	 *
 	 * @param bugRaisedValue
-	 *            Value of raised defect
+	 *          Value of raised defect
 	 * @param issueFieldValue
-	 *            Issue Field Value Object
+	 *          Issue Field Value Object
 	 * @return boolean
 	 */
-
 	public boolean isBugRaisedByValueMatchesRaisedByCustomField(List<String> bugRaisedValue, Object issueFieldValue) {
 		List<String> lowerCaseBugRaisedValue = bugRaisedValue.stream().map(String::toLowerCase)
 				.collect(Collectors.toList());
@@ -690,7 +674,6 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 			FieldMapping fieldMapping, ProjectConfFieldMapping projectConfig, Map<String, Object> fieldsMap) {
 
 		azureIssueHistory.setProjectID(azureIssue.getProjectName());
-		azureIssueHistory.setProjectComponentId(azureIssue.getProjectID());
 		azureIssueHistory.setProjectKey(azureIssue.getProjectKey());
 		azureIssueHistory.setStoryType(azureIssue.getTypeName());
 		azureIssueHistory.setAdditionalFilters(azureIssue.getAdditionalFilters());
@@ -708,19 +691,18 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 	 * Process Jira issue History
 	 *
 	 * @param azureIssueCustomHistory
-	 *            azureIssueCustomHistory
+	 *          azureIssueCustomHistory
 	 * @param azureIssue
-	 *            azureIssue
+	 *          azureIssue
 	 * @param issue
-	 *            Atlassain issue
+	 *          Atlassain issue
 	 * @param fieldMapping
-	 *            Project field Mapping
+	 *          Project field Mapping
 	 * @param projectConfig
-	 *            Project Config
+	 *          Project Config
 	 */
 	private void processAzureIssueHistory(JiraIssueCustomHistory azureIssueCustomHistory, JiraIssue azureIssue,
-			Value issue, FieldMapping fieldMapping, ProjectConfFieldMapping projectConfig,
-			Map<String, Object> fieldsMap) {
+			Value issue, FieldMapping fieldMapping, ProjectConfFieldMapping projectConfig, Map<String, Object> fieldsMap) {
 
 		String issueId = AzureProcessorUtil.deodeUTF8String(issue.getId());
 		AzureServer server = prepareAzureServer(projectConfig);
@@ -742,56 +724,52 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 
 			scrumHandleAzureIssueHistory.setJiraIssueCustomHistoryUpdationLog(azureIssueCustomHistory, valueList,
 					fieldMapping, fieldsMap);
-
 		}
-
 	}
 
 	/**
 	 * Adds Jira issue history
 	 *
 	 * @param azureIssueCustomHistory
-	 *            JiraIssueCustomHistory
+	 *          JiraIssueCustomHistory
 	 * @param azureIssue
-	 *            JiraIssue
+	 *          JiraIssue
 	 * @param issue
-	 *            Atlassian Issue
+	 *          Atlassian Issue
 	 * @param valueList
-	 *            Update value list
+	 *          Update value list
 	 * @param fieldMapping
-	 *            project Fieldmapping
+	 *          project Fieldmapping
 	 */
 	private void addStoryHistory(JiraIssueCustomHistory azureIssueCustomHistory, JiraIssue azureIssue, Value issue,
 			List<com.publicissapient.kpidashboard.common.model.azureboards.updates.Value> valueList,
 			FieldMapping fieldMapping, Map<String, Object> fieldsMap) {
 
-		DateTime dateTime = new DateTime(
-				AzureProcessorUtil.getFormattedDateTime(issue.getFields().getSystemCreatedDate()));
+		DateTime dateTime = new DateTime(AzureProcessorUtil.getFormattedDateTime(issue.getFields().getSystemCreatedDate()));
 		azureIssueCustomHistory.setCreatedDate(dateTime);
 
 		azureIssueCustomHistory.setStoryID(azureIssue.getNumber());
-		scrumHandleAzureIssueHistory.setJiraIssueCustomHistoryUpdationLog(azureIssueCustomHistory, valueList,
-				fieldMapping, fieldsMap);
+		scrumHandleAzureIssueHistory.setJiraIssueCustomHistoryUpdationLog(azureIssueCustomHistory, valueList, fieldMapping,
+				fieldsMap);
 		// estimate
 		azureIssueCustomHistory.setEstimate(azureIssue.getEstimate());
 		if (NormalizedJira.DEFECT_TYPE.getValue().equalsIgnoreCase(azureIssue.getTypeName())) {
 			azureIssueCustomHistory.setDefectStoryID(azureIssue.getDefectStoryID());
 		}
-
 	}
 
 	/**
 	 * Saves accountHierarchy for filter
 	 *
 	 * @param jiraIssueList
-	 *            list of jira issues
+	 *          list of jira issues
 	 * @param projectConfig
-	 *            Project Configuration Map
+	 *          Project Configuration Map
 	 * @param hierarchyLevelList
-	 *            hierarchyLevelList
+	 *          hierarchyLevelList
 	 */
 	private void saveAccountHierarchy(List<JiraIssue> jiraIssueList, ProjectConfFieldMapping projectConfig, // NOPMD
-																											// //NOSONAR
+			// //NOSONAR
 			List<HierarchyLevel> hierarchyLevelList) { // NOSONAR
 
 		Map<String, HierarchyLevel> hierarchyLevelsMap = hierarchyLevelList.stream()
@@ -799,35 +777,28 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 
 		HierarchyLevel sprintHierarchyLevel = hierarchyLevelsMap.get(CommonConstant.HIERARCHY_LEVEL_ID_SPRINT);
 
-		Map<Pair<String, String>, AccountHierarchy> existingHierarchy = AzureIssueClientUtil
-				.getAccountHierarchy(accountHierarchyRepository);
+		Map<String, List<ProjectHierarchy>> existingHierarchy = projectHierarchyService
+				.getProjectHierarchyMapByConfig(projectConfig.getBasicProjectConfigId().toString());
 
-		Set<AccountHierarchy> setToSave = new HashSet<>();
+		Set<ProjectHierarchy> setToSave = new HashSet<>();
 		for (JiraIssue jiraIssue : jiraIssueList) {
-			if (StringUtils.isNotBlank(jiraIssue.getProjectName()) && StringUtils.isNotBlank(jiraIssue.getSprintName())
-					&& StringUtils.isNotBlank(jiraIssue.getSprintBeginDate())
-					&& StringUtils.isNotBlank(jiraIssue.getSprintEndDate())) {
+			if (StringUtils.isNotBlank(jiraIssue.getProjectName()) && StringUtils.isNotBlank(jiraIssue.getSprintName()) &&
+					StringUtils.isNotBlank(jiraIssue.getSprintBeginDate()) &&
+					StringUtils.isNotBlank(jiraIssue.getSprintEndDate())) {
 
-				AccountHierarchy projectData = accountHierarchyRepository
-						.findByLabelNameAndBasicProjectConfigId(CommonConstant.HIERARCHY_LEVEL_ID_PROJECT,
-								new ObjectId(jiraIssue.getBasicProjectConfigId()))
-						.get(0);
-
-				AccountHierarchy sprintHierarchy = createHierarchyForSprint(jiraIssue,
-						projectConfig.getProjectBasicConfig(), projectData, sprintHierarchyLevel);
+				ProjectHierarchy sprintHierarchy = createHierarchyForSprint(jiraIssue, projectConfig.getProjectBasicConfig(),
+						sprintHierarchyLevel);
 
 				setToSaveAccountHierarchy(setToSave, sprintHierarchy, existingHierarchy);
 
-				List<AccountHierarchy> additionalFiltersHierarchies = accountHierarchiesForAdditionalFilters(jiraIssue,
+				List<ProjectHierarchy> additionalFiltersHierarchies = accountHierarchiesForAdditionalFilters(jiraIssue,
 						sprintHierarchy, sprintHierarchyLevel, hierarchyLevelList);
-				additionalFiltersHierarchies.forEach(
-						accountHierarchy -> setToSaveAccountHierarchy(setToSave, accountHierarchy, existingHierarchy));
-
+				additionalFiltersHierarchies
+						.forEach(accountHierarchy -> setToSaveAccountHierarchy(setToSave, accountHierarchy, existingHierarchy));
 			}
-
 		}
 		if (CollectionUtils.isNotEmpty(setToSave)) {
-			accountHierarchyRepository.saveAll(setToSave);
+			projectHierarchyService.saveAll(setToSave);
 		}
 	}
 
@@ -849,13 +820,13 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 	 * Sets Story Link with Defect
 	 *
 	 * @param issue
-	 *            Atlassian Issue
+	 *          Atlassian Issue
 	 * @param azureIssue
-	 *            Jira Issue
+	 *          Jira Issue
 	 */
 	private void setStoryLinkWithDefect(Value issue, JiraIssue azureIssue, ProjectConfFieldMapping projectConfig) {
-		if (NormalizedJira.DEFECT_TYPE.getValue().equalsIgnoreCase(azureIssue.getTypeName())
-				|| NormalizedJira.TEST_TYPE.getValue().equalsIgnoreCase(azureIssue.getTypeName())) {
+		if (NormalizedJira.DEFECT_TYPE.getValue().equalsIgnoreCase(azureIssue.getTypeName()) ||
+				NormalizedJira.TEST_TYPE.getValue().equalsIgnoreCase(azureIssue.getTypeName())) {
 
 			Set<String> defectStorySet = new HashSet<>();
 
@@ -877,8 +848,8 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 				if (url.contains("_apis/wit/workItems")) {
 					int i = url.lastIndexOf('/');
 					String storyIdFromDefect = url.substring(i + 1);
-					if (CollectionUtils.isNotEmpty(azureProcessorConfig.getExcludeLinks())
-							&& azureProcessorConfig.getExcludeLinks().stream().anyMatch(name::equalsIgnoreCase)) {
+					if (CollectionUtils.isNotEmpty(azureProcessorConfig.getExcludeLinks()) &&
+							azureProcessorConfig.getExcludeLinks().stream().anyMatch(name::equalsIgnoreCase)) {
 						break;
 					}
 					String projectKeyIssueId = getModifiedIssueId(projectConfig, storyIdFromDefect);
@@ -888,8 +859,7 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 		}
 	}
 
-	private Map<String, LocalDateTime> findLastSavedJiraIssueByType(ObjectId projectConfigId,
-			FieldMapping fieldMapping) {
+	private Map<String, LocalDateTime> findLastSavedJiraIssueByType(ObjectId projectConfigId, FieldMapping fieldMapping) {
 		String[] jiraIssueTypeNames = fieldMapping.getJiraIssueTypeNames();
 		Set<String> uniqueIssueTypes = new HashSet<>(Arrays.asList(jiraIssueTypeNames));
 
@@ -899,8 +869,7 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 
 			JiraIssue jiraIssue = jiraIssueRepository
 					.findTopByProcessorIdAndBasicProjectConfigIdAndTypeNameAndChangeDateGreaterThanOrderByChangeDateDesc(
-							azureProcessorId, projectConfigId.toString(), issueType,
-							azureProcessorConfig.getStartDate());
+							azureProcessorId, projectConfigId.toString(), issueType, azureProcessorConfig.getStartDate());
 			LocalDateTime configuredStartDate = LocalDateTime.parse(azureProcessorConfig.getStartDate(),
 					DateTimeFormatter.ofPattern(AzureConstants.JIRA_ISSUE_CHANGE_DATE_FORMAT));
 
@@ -956,7 +925,6 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 			} else {
 				lastUpdatedDateByIssueType.put(issueType, configuredStartDate);
 			}
-
 		}
 
 		return lastUpdatedDateByIssueType;
@@ -966,24 +934,20 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 	 * * Set Details related to issues with Epic Issue type
 	 *
 	 * @param fieldMapping
-	 *            fieldMapping
-	 *
+	 *          fieldMapping
 	 * @param azureIssue
-	 *            azureIssue
-	 *
+	 *          azureIssue
 	 * @param fieldsMap
-	 *            fieldsMap
+	 *          fieldsMap
 	 */
 	private void setEpicIssueData(FieldMapping fieldMapping, JiraIssue azureIssue, Map<String, Object> fieldsMap) {
 		if (fieldsMap.get(fieldMapping.getEpicJobSize()) != null) {
 			String fieldValue = fieldsMap.get(fieldMapping.getEpicJobSize()).toString();
 			azureIssue.setJobSize(Double.parseDouble(fieldValue));
-
 		}
 		if (fieldsMap.get(fieldMapping.getEpicRiskReduction()) != null) {
 			String fieldValue = fieldsMap.get(fieldMapping.getEpicRiskReduction()).toString();
 			azureIssue.setRiskReduction(Double.parseDouble(fieldValue));
-
 		}
 		if (fieldsMap.get(fieldMapping.getEpicTimeCriticality()) != null) {
 			String fieldValue = fieldsMap.get(fieldMapping.getEpicTimeCriticality()).toString();
@@ -997,8 +961,8 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 			String fieldValue = fieldsMap.get(fieldMapping.getEpicWsjf()).toString();
 			azureIssue.setWsjf(Double.parseDouble(fieldValue));
 		}
-		double costOfDelay = azureIssue.getBusinessValue() + azureIssue.getRiskReduction()
-				+ azureIssue.getTimeCriticality();
+		double costOfDelay = azureIssue.getBusinessValue() + azureIssue.getRiskReduction() +
+				azureIssue.getTimeCriticality();
 		azureIssue.setCostOfDelay(costOfDelay);
 	}
 
@@ -1044,10 +1008,6 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 
 	private void setProjectSpecificDetails(ProjectConfFieldMapping projectConfig, JiraIssue jiraIssue) {
 		String name = projectConfig.getProjectName();
-		String id = new StringBuffer(name).append(CommonConstant.UNDERSCORE)
-				.append(projectConfig.getBasicProjectConfigId().toString()).toString();
-
-		jiraIssue.setProjectID(id);
 		jiraIssue.setProjectName(name);
 		jiraIssue.setProjectKey(projectConfig.getProjectKey());
 		jiraIssue.setBasicProjectConfigId(projectConfig.getBasicProjectConfigId().toString());
@@ -1059,86 +1019,91 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 		jiraIssue.setProjectPath("");
 	}
 
-	private AccountHierarchy createHierarchyForSprint(JiraIssue jiraIssue, ProjectBasicConfig projectBasicConfig,
-			AccountHierarchy projectHierarchy, HierarchyLevel hierarchyLevel) {
-		AccountHierarchy accountHierarchy = null;
+	private ProjectHierarchy createHierarchyForSprint(JiraIssue jiraIssue, ProjectBasicConfig projectBasicConfig,
+			HierarchyLevel hierarchyLevel) {
+		ProjectHierarchy projectHierarchy = null;
 		try {
 
-			accountHierarchy = new AccountHierarchy();
-			accountHierarchy.setBasicProjectConfigId(projectBasicConfig.getId());
-			accountHierarchy.setIsDeleted(AzureConstants.FALSE);
-			accountHierarchy.setLabelName(hierarchyLevel.getHierarchyLevelId());
+			projectHierarchy = new ProjectHierarchy();
+			projectHierarchy.setBasicProjectConfigId(projectBasicConfig.getId());
+			projectHierarchy.setHierarchyLevelId(hierarchyLevel.getHierarchyLevelId());
 			String sprintName = (String) PropertyUtils.getSimpleProperty(jiraIssue, "sprintName");
 			String sprintId = (String) PropertyUtils.getSimpleProperty(jiraIssue, "sprintID");
-
-			accountHierarchy.setNodeId(sprintId);
-			accountHierarchy.setNodeName(sprintName + AzureConstants.COMBINE_IDS_SYMBOL + jiraIssue.getProjectName());
-
-			accountHierarchy.setBeginDate((String) PropertyUtils.getSimpleProperty(jiraIssue, "sprintBeginDate"));
-			accountHierarchy.setEndDate((String) PropertyUtils.getSimpleProperty(jiraIssue, "sprintEndDate"));
-			accountHierarchy.setPath(new StringBuffer(56).append(projectHierarchy.getNodeId())
-					.append(CommonConstant.ACC_HIERARCHY_PATH_SPLITTER).append(projectHierarchy.getPath()).toString());
-			accountHierarchy.setParentId(projectHierarchy.getNodeId());
+			String state = (String) PropertyUtils.getSimpleProperty(jiraIssue, "sprintAssetState");
+			projectHierarchy.setNodeId(sprintId);
+			projectHierarchy.setNodeName(sprintName);
+			projectHierarchy.setNodeDisplayName(sprintName);
+			projectHierarchy.setSprintState(state);
+			projectHierarchy.setBeginDate((String) PropertyUtils.getSimpleProperty(jiraIssue, "sprintBeginDate"));
+			projectHierarchy.setEndDate((String) PropertyUtils.getSimpleProperty(jiraIssue, "sprintEndDate"));
+			projectHierarchy.setParentId(projectBasicConfig.getProjectNodeId());
 
 		} catch (NoSuchMethodException | IllegalAccessException | InvocationTargetException e) {
 			log.error("Jira Processor Failed to get Account Hierarchy data {}", e);
 		}
-		return accountHierarchy;
+		return projectHierarchy;
 	}
 
-	private List<AccountHierarchy> accountHierarchiesForAdditionalFilters(JiraIssue jiraIssue,
-			AccountHierarchy sprintHierarchy, HierarchyLevel sprintHierarchyLevel,
-			List<HierarchyLevel> hierarchyLevelList) {
+	private List<ProjectHierarchy> accountHierarchiesForAdditionalFilters(JiraIssue jiraIssue,
+			ProjectHierarchy sprintHierarchy, HierarchyLevel sprintHierarchyLevel, List<HierarchyLevel> hierarchyLevelList) {
 
-		List<AccountHierarchy> accountHierarchies = new ArrayList<>();
+		List<ProjectHierarchy> projectHierarchyList = new ArrayList<>();
 		List<AdditionalFilter> additionalFilters = ListUtils.emptyIfNull(jiraIssue.getAdditionalFilters());
 
 		List<String> additionalFilterCategoryIds = hierarchyLevelList.stream()
-				.filter(x -> x.getLevel() > sprintHierarchyLevel.getLevel()).map(HierarchyLevel::getHierarchyLevelId)
-				.collect(Collectors.toList());
+				.filter(x -> x.getLevel() > sprintHierarchyLevel.getLevel()).map(HierarchyLevel::getHierarchyLevelId).toList();
 
 		additionalFilters.forEach(additionalFilter -> {
 			if (additionalFilterCategoryIds.contains(additionalFilter.getFilterId())) {
 				String labelName = additionalFilter.getFilterId();
 				additionalFilter.getFilterValues().forEach(additionalFilterValue -> {
-					AccountHierarchy adFilterAccountHierarchy = new AccountHierarchy();
-					adFilterAccountHierarchy.setLabelName(labelName);
+					ProjectHierarchy adFilterAccountHierarchy = new ProjectHierarchy();
+					adFilterAccountHierarchy.setHierarchyLevelId(labelName);
 					adFilterAccountHierarchy.setNodeId(additionalFilterValue.getValueId());
 					adFilterAccountHierarchy.setNodeName(additionalFilterValue.getValue());
+					adFilterAccountHierarchy.setNodeDisplayName(additionalFilterValue.getValue());
 					adFilterAccountHierarchy.setParentId(sprintHierarchy.getNodeId());
-					adFilterAccountHierarchy.setPath(sprintHierarchy.getNodeId()
-							+ CommonConstant.ACC_HIERARCHY_PATH_SPLITTER + sprintHierarchy.getPath());
-					adFilterAccountHierarchy.setBasicProjectConfigId(new ObjectId(jiraIssue.getBasicProjectConfigId()));
-					accountHierarchies.add(adFilterAccountHierarchy);
+					adFilterAccountHierarchy.setBasicProjectConfigId(sprintHierarchy.getBasicProjectConfigId());
+					projectHierarchyList.add(adFilterAccountHierarchy);
 				});
 			}
-
 		});
-
-		return accountHierarchies;
+		return projectHierarchyList;
 	}
 
 	/**
 	 * @param setToSave
-	 * @param accountHierarchy
+	 * @param sprintHierarchy
 	 * @param existingHierarchy
 	 */
-	private void setToSaveAccountHierarchy(Set<AccountHierarchy> setToSave, AccountHierarchy accountHierarchy,
-			Map<Pair<String, String>, AccountHierarchy> existingHierarchy) {
-		if (StringUtils.isNotBlank(accountHierarchy.getParentId())) {
-			AccountHierarchy exHiery = existingHierarchy
-					.get(Pair.of(accountHierarchy.getNodeId(), accountHierarchy.getPath()));
-
-			if (null == exHiery) {
-				accountHierarchy.setCreatedDate(LocalDateTime.now());
-				setToSave.add(accountHierarchy);
+	private void setToSaveAccountHierarchy(Set<ProjectHierarchy> setToSave, ProjectHierarchy sprintHierarchy,
+			Map<String, List<ProjectHierarchy>> existingHierarchy) {
+		if (StringUtils.isNotBlank(sprintHierarchy.getParentId())) {
+			List<ProjectHierarchy> exHieryList = existingHierarchy.get(sprintHierarchy.getNodeId());
+			if (CollectionUtils.isEmpty(exHieryList)) {
+				sprintHierarchy.setCreatedDate(LocalDateTime.now());
+				setToSave.add(sprintHierarchy);
+			} else {
+				Map<String, ProjectHierarchy> exHiery = exHieryList.stream()
+						.collect(Collectors.toMap(OrganizationHierarchy::getParentId, p -> p, (existing, newPair) -> existing));
+				ProjectHierarchy projectHierarchy = exHiery.get(sprintHierarchy.getParentId());
+				if (projectHierarchy == null) {
+					sprintHierarchy.setCreatedDate(LocalDateTime.now());
+					setToSave.add(sprintHierarchy);
+				} else if (!projectHierarchy.equals(sprintHierarchy)) {
+					projectHierarchy.setBeginDate(sprintHierarchy.getBeginDate());
+					projectHierarchy.setNodeName(sprintHierarchy.getNodeName()); // sprint name changed
+					projectHierarchy.setEndDate(sprintHierarchy.getEndDate());
+					projectHierarchy.setSprintState(sprintHierarchy.getSprintState());
+					setToSave.add(projectHierarchy);
+				}
 			}
 		}
 	}
 
 	/**
 	 * setting URL to jira_issue
-	 * 
+	 *
 	 * @param ticketNumber
 	 * @param jiraIssue
 	 * @param projectConfig
@@ -1146,15 +1111,15 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 	private void setURL(String ticketNumber, JiraIssue jiraIssue, ProjectConfFieldMapping projectConfig) {
 		String baseUrl = projectConfig.getAzure().getConnection().getBaseUrl();
 		baseUrl = baseUrl + (baseUrl.endsWith("/") ? "" : "/");
-		jiraIssue.setUrl(
-				baseUrl.equals("") ? "" : baseUrl + azureProcessorConfig.getAzureDirectTicketLinkKey() + ticketNumber);
+		jiraIssue
+				.setUrl(baseUrl.equals("") ? "" : baseUrl + azureProcessorConfig.getAzureDirectTicketLinkKey() + ticketNumber);
 	}
 
 	private void setDueDates(JiraIssue jiraIssue, Fields fields, Map<String, Object> fieldsMap,
 			FieldMapping fieldMapping) {
 		if (StringUtils.isNotEmpty(fieldMapping.getJiraDueDateField())) {
-			jiraIssue.setDueDate(getIssueDate(fieldMapping.getJiraDueDateField(),
-					fieldMapping.getJiraDueDateCustomField(), fields, fieldsMap));
+			jiraIssue.setDueDate(getIssueDate(fieldMapping.getJiraDueDateField(), fieldMapping.getJiraDueDateCustomField(),
+					fields, fieldsMap));
 		}
 
 		if (StringUtils.isNotEmpty(fieldMapping.getJiraDevDueDateField())) {
@@ -1163,14 +1128,13 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 		}
 	}
 
-	private String getIssueDate(String dateField, String customDateField, Fields fields,
-			Map<String, Object> fieldsMap) {
-		if (dateField.equalsIgnoreCase(CommonConstant.DUE_DATE)
-				&& ObjectUtils.isNotEmpty(fields.getMicrosoftVSTSSchedulingDueDate())) {
+	private String getIssueDate(String dateField, String customDateField, Fields fields, Map<String, Object> fieldsMap) {
+		if (dateField.equalsIgnoreCase(CommonConstant.DUE_DATE) &&
+				ObjectUtils.isNotEmpty(fields.getMicrosoftVSTSSchedulingDueDate())) {
 			return AzureProcessorUtil.deodeUTF8String(fields.getMicrosoftVSTSSchedulingDueDate()).split("T")[0]
 					.concat(DateUtil.ZERO_TIME_ZONE_FORMAT);
-		} else if (StringUtils.isNotEmpty(customDateField) && fieldsMap.containsKey(customDateField)
-				&& ObjectUtils.isNotEmpty(fieldsMap.get(customDateField))) {
+		} else if (StringUtils.isNotEmpty(customDateField) && fieldsMap.containsKey(customDateField) &&
+				ObjectUtils.isNotEmpty(fieldsMap.get(customDateField))) {
 			Object issueField = fieldsMap.get(customDateField);
 			if (ObjectUtils.isNotEmpty(issueField)) {
 				return AzureProcessorUtil.deodeUTF8String(issueField.toString()).split("T")[0]
@@ -1183,7 +1147,7 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 	/**
 	 * save assignee details from jira issue and if already exist then update
 	 * assignee list
-	 * 
+	 *
 	 * @param projectConfig
 	 * @param assigneeSetToSave
 	 * @param assigneeDetails
@@ -1245,5 +1209,4 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 		processorExecutionTraceLog.setExecutionEndedAt(System.currentTimeMillis());
 		processorExecutionTraceLogService.save(processorExecutionTraceLog);
 	}
-
 }
